releases/v1.0.14/_sources/reference/bibliography.rst.txt
############
Bibliography
############


The following is the full list of references that were used to implement theory codes and provide likelihood constraints
or parameter values within EOS v1.0.14.

.. list-table::
   :widths: 15, 60, 25
   :header-rows: 1

   * - Id
     - Title
     - Links

       .. _AAGW:2001A:
   * - [AAGW:2001A]
     - Calculation of two loop virtual corrections to :math:`b \to s \ell^+ \ell^-` in the standard model
     - |badge-hep-ph/0109140| |br|

       .. _ABBBSW:2008A:
   * - [ABBBSW:2008A]
     - Symmetries and Asymmetries of :math:`B \to K^{*} \mu^{+} \mu^{-}` Decays in the Standard Model and Beyond
     - |badge-0811.1214| |br|

       .. _ABGW:2003A:
   * - [ABGW:2003A]
     - Virtual corrections and bremsstrahlung corrections to $b \to d \ell^+ \ell^- in the standard model
     - |badge-hep-ph/0312063| |br|

       .. _ABHH:1999A:
   * - [ABHH:1999A]
     - A Comparative study of the decays :math:`B \to K^{(*)} \ell^+ \ell^-` in standard model and supersymmetric theories
     - |badge-hep-ph/9910221| |br|

       .. _AEMSS:2002A:
   * - [AEMSS:2002A]
     - Renormalization group improvement of effective actions beyond summation of leading logarithms
     - |badge-hep-ph/0211227| |br|

       .. _AFGV:2017A:
   * - [AFGV:2017A]
     - B physics Beyond the Standard Model at One Loop: Complete Renormalization Group Evolution below the Electroweak Scale
     - |badge-1704.06639| |br|

       .. _ALGH:2001A:
   * - [ALGH:2001A]
     - Improved model independent analysis of semileptonic and radiative rare :math:`B` decays
     - |badge-hep-ph/0112300| |br|

       .. _ATLAS+CMS+LHCb:2020A:
   * - [ATLAS+CMS+LHCb:2020A]
     - Combination of the ATLAS, CMS and LHCb results on the :math:`B^0_{(s)} \to \mu^+ \mu^-` decays
     - |badge-2727207| |br|

       .. _ATLAS:2013A:
   * - [ATLAS:2013A]
     - Withdrawn: Angular Analysis of :math:`B_d \to K^{*0} \mu^+ \mu^-` with the ATLAS experiment
     - |badge-1550950| |br|

       .. _ATLAS:2018A:
   * - [ATLAS:2018A]
     - Study of the rare decays of :math:`B^0_s` and :math:`B^0` mesons into muon pairs using data collected during 2015 and 2016 with the ATLAS detector
     - |badge-1812.03017| |br|

       .. _ATLAS:2018B:
   * - [ATLAS:2018B]
     - Angular analysis of :math:`B^0_d \rightarrow K^{*}\mu^+\mu^-` decays in :math:`pp` collisions at :math:`\sqrt{s}= 8` TeV with the ATLAS detector
     - |badge-1805.04000| |br|

       .. _ATLAS:2020A:
   * - [ATLAS:2020A]
     - Measurement of the :math:`CP`-violating phase :math:`\phi_s` in :math:`B^0_s \to J/\psi\phi` decays in ATLAS at 13 TeV
     - |badge-2001.07115| |br|

       .. _B:1998A:
   * - [B:1998A]
     - A Quark mass definition adequate for threshold problems
     - |badge-hep-ph/9804241| |br|

       .. _BB:1999A:
   * - [BB:1999A]
     - The rare decays :math:`K\to \pi \nu\bar\nu`, :math:`B \to X \nu\bar\nu` and :math:`B \to \ell^+ \ell^-`: An Update
     -

       .. _BBGJvD:2020A:
   * - [BBGJvD:2020A]
     - Lepton-flavour non-universality of :math:`\bar{B}\to D^*\ell \bar\nu` angular distributions in and beyond the Standard Model
     - |badge-2104.02094| |br|

       .. _BBGORvD:2018A:
   * - [BBGORvD:2018A]
     - Testing lepton flavour universality in semileptonic :math:`\Lambda_b \to \Lambda_c^*` decays
     - |badge-1801.08367| |br|

       .. _BBJW:2018A:
   * - [BBJW:2018A]
     - Radiative leptonic decay :math:`B\to \gamma \ell \nu_\ell` with subleading power corrections
     - |badge-1804.04962| |br|

       .. _BBKT:1998A:
   * - [BBKT:1998A]
     - Higher twist distribution amplitudes of vector mesons in QCD: Formalism and twist - three distributions
     - |badge-hep-ph/9802299| |br|

       .. _BBL:1995A:
   * - [BBL:1995A]
     - Weak decays beyond leading logarithms
     - |badge-hep-ph/9512380| |br|

       .. _BBL:2006A:
   * - [BBL:2006A]
     - Higher-twist distribution amplitudes of the K meson in QCD
     - |badge-hep-ph/0603063| |br|

       .. _BBMU:2003A:
   * - [BBMU:2003A]
     - Imprecated, yet impeccable: On the theoretical evaluation of :math:`\Gamma(B \to X_c \ell \nu)`
     - |badge-hep-ph/0302262| |br|

       .. _BBNS:2000A:
   * - [BBNS:2000A]
     - QCD factorization for exclusive, nonleptonic B meson decays: General arguments and the case of heavy light final states
     - |badge-hep-ph/0006124| |br|

       .. _BCL:2008A:
   * - [BCL:2008A]
     - Model-independent description of :math:`B \to \pi \ell \nu` decays and a determination of :math:`|V_{ub}|`
     - |badge-0807.2722| |br|

       .. _BCMU:2002A:
   * - [BCMU:2002A]
     - Completing the NLO QCD calculation of :math:`\bar{B} \to X_s \gamma`
     - |badge-hep-ph/0203135| |br|

       .. _BEKU:2002A:
   * - [BEKU:2002A]
     - Enhancement of :math:`\mathcal{B}(\bar{B}_d \to \mu^{+} \mu^{-}) / \mathcal{B}(\bar{B}_s \to \mu^{+} \mu^{-})` in the MSSM with minimal flavor violation and large tan beta
     - |badge-hep-ph/0204225| |br|

       .. _BES:2002A:
   * - [BES:2002A]
     - Measurements of the cross-section for :math:`e^+ e^- \to` hadrons at center-of-mass energies from 2 GeV to 5 GeV
     - |badge-hep-ex/0102003| |br|

       .. _BES:2006A:
   * - [BES:2006A]
     - Measurements of the continuum :math:`R_{uds}` and :math:`R` values in :math:`e^+ e^-` annihilation in the energy region between 3.650 and 3.872-GeV
     - |badge-hep-ex/0612054| |br|

       .. _BES:2006B:
   * - [BES:2006B]
     - Measurements of the cross-sections for :math:`e^+ e^- \to` hadrons at 3.650-GeV, 3.6648-GeV, 3.773-GeV and the branching fraction for :math:`\psi(3770) \to` non-:math:`D\bar{D}`
     - |badge-hep-ex/0605105| |br|

       .. _BES:2008A:
   * - [BES:2008A]
     - Measurements of the line shapes of D anti-D production and the ratio of the production rates of D+ D- and D0 anti-D0 in e+ e- annihilation at psi(3770) resonance
     -

       .. _BES:2017A:
   * - [BES:2017A]
     - Measurement of :math:`D\overline{D}` Decays from the psi(3770) Resonance
     -

       .. _BES:2021A:
   * - [BES:2021A]
     - Cross section measurements of the :math:`e^+e^-\to D^{*+}D^{*-}` and :math:`e^+e^-\to D^{*+}D^{-}` processes at center-of-mass energies from 4.085 to 4.600 GeV
     - |badge-2112.06477| |br|

       .. _BF:2001A:
   * - [BF:2001A]
     - Symmetry breaking corrections to heavy to light :math:`B` meson form-factors at large recoil
     - |badge-hep-ph/0008255| |br|

       .. _BFNT:2019A:
   * - [BFNT:2019A]
     - Lepton Flavor Universality tests through angular observables of :math:`\bar{B} \to D^{(*)} \ell \bar{nu}` decay modes
     - |badge-1907.02257| |br|

       .. _BFS:2001A:
   * - [BFS:2001A]
     - Systematic approach to exclusive :math:`B \to  V \ell^+ \ell^-`, :math:`V \gamma` decays
     - |badge-hep-ph/0106067| |br|

       .. _BFS:2004A:
   * - [BFS:2004A]
     - Exclusive radiative and electroweak :math:`b \to d` and :math:`b \to s` penguin decays at NLO
     - |badge-hep-ph/0412400| |br|

       .. _BFW:2010A:
   * - [BFW:2010A]
     - Theoretical and Phenomenological Constraints on Form Factors for Radiative and Semi-Leptonic :math:`B`-Meson Decays
     - |badge-1004.3249| |br|

       .. _BFvD:2014A:
   * - [BFvD:2014A]
     - Angular Analysis of the Decay :math:`\Lambda_b \to \Lambda (\to N \pi) \ell^+\ell^-`
     - |badge-1410.2115| |br|

       .. _BFvD:2016A:
   * - [BFvD:2016A]
     - QCD Factorization Theorem for :math:`B \to \pi \pi \ell \nu` Decays at Large Dipion Masses
     - |badge-1608.07127| |br|

       .. _BG:2016A:
   * - [BG:2016A]
     - Revisiting :math:`B\to D \ell \nu`
     - |badge-1606.08030| |br|

       .. _BGJvD:2019A:
   * - [BGJvD:2019A]
     - Heavy-Quark expansion for :math:`{{\bar{B}}_s\rightarrow D^{(*)}_s}` form factors and unitarity bounds beyond the :math:`{SU(3)_F}` limit
     - |badge-1912.09335| |br|

       .. _BGL:1997A:
   * - [BGL:1997A]
     - Precision corrections to dispersive bounds on form-factors
     - |badge-hep-ph/9705252| |br|

       .. _BGNS:2014A:
   * - [BGNS:2014A]
     - :math:`B \to K^{(*)} \nu \overline{\nu}` decays in the Standard Model and beyond
     - |badge-1409.4557| |br|

       .. _BGS:2010A:
   * - [BGS:2010A]
     - Two-Loop Electroweak Corrections for the :math:`K \to \pi \nu \bar{\nu}` Decays
     - |badge-1009.0947| |br|

       .. _BGS:2017A:
   * - [BGS:2017A]
     - :math:`R(D^*)`, :math:`|V_{cb}|`, and the Heavy Quark Symmetry relations between form factors
     - |badge-1707.09509| |br|

       .. _BHP:2007A:
   * - [BHP:2007A]
     - Angular distributions of :math:`\bar{B} \to \bar{K} \ell^+\ell^-` decays
     - |badge-0709.4174| |br|

       .. _BHP:2008A:
   * - [BHP:2008A]
     - CP Asymmetries in bar :math:`B \to \bar{K}^* (\to \bar{K} \pi) \bar{\ell} \ell` and Untagged :math:`\bar{B}_s`, :math:`B_s \to \phi (\to K^{+} K^-) \bar{\ell} \ell` Decays at NLO
     - |badge-0805.2525| |br|

       .. _BHvD:2010A:
   * - [BHvD:2010A]
     - The Benefits of :math:`\bar{B} \to \bar{K}^* l^+ l^-` Decays at Low Recoil
     - |badge-1006.5013| |br|

       .. _BHvD:2011A:
   * - [BHvD:2011A]
     - More Benefits of Semileptonic Rare B Decays at Low Recoil: CP Violation
     - |badge-1105.0376| |br|

       .. _BHvD:2012A:
   * - [BHvD:2012A]
     - General analysis of :math:`\bar{B} \to \bar{K}^{(*)}\ell^+ \ell^-`  decays at low recoil
     - |badge-1212.2321| |br|

       .. _BIvD:2016A:
   * - [BIvD:2016A]
     - Impact of leptonic :math:`\tau ` decays on the distribution of :math:`B\rightarrow P\mu \bar{\nu }` decays
     - |badge-1602.06143| |br|

       .. _BJvD:2019A:
   * - [BJvD:2019A]
     - Theory determination of :math:`\bar{B}\to D^{(*)}\ell^-\bar\nu` form factors at :math:`\mathcal{O}(1/m_c^2)`
     - |badge-1908.09398| |br|

       .. _BLPR:2017A:
   * - [BLPR:2017A]
     - Combined analysis of semileptonic :math:`B` decays to :math:`D` and :math:`D^*`: :math:`R(D^{(*)})`, :math:`|V_{cb}|`, and new physics
     - |badge-1703.05330| |br|

       .. _BM:1995A:
   * - [BM:1995A]
     - Effective Hamiltonian for :math:`B \to X_s e^+ e^-` beyond leading logarithms in the NDR and HV schemes
     - |badge-hep-ph/9501281| |br|

       .. _BMU:1999A:
   * - [BMU:1999A]
     - Photonic penguins at two loops and :math:`m_t` dependence of :math:`\mathcal{B}(B \to  X_s \ell^+ \ell^-)`
     - |badge-hep-ph/9910220| |br|

       .. _BPR:2021A:
   * - [BPR:2021A]
     - :math:`B\to \rho \ell \bar{\nu}` and :math:`\omega\to \ell \bar{\nu}` in and beyond the Standard Model: Improved predictions and :math:`\abs{V_{ub}}`
     - |badge-2104.05739| |br|

       .. _BR:2011A:
   * - [BR:2011A]
     - B meson distribution amplitude from :math:`B\to\gamma\ell\nu`
     - |badge-1110.3228| |br|

       .. _BS:2011A:
   * - [BS:2011A]
     - On transverse asymmetries in :math:`B \to K^* \ell^+\ell^-`
     - |badge-1106.3283| |br|

       .. _BSZ:2015A:
   * - [BSZ:2015A]
     - :math:`B\to V\ell^+\ell^-` in the Standard Model from light-cone sum rules
     - |badge-1503.05534| |br|

       .. _BZ:2004A:
   * - [BZ:2004A]
     - :math:`B_{d,s} \to  \rho, \omega, K^*, \phi` decay form-factors from light-cone sum rules revisited
     - |badge-hep-ph/0412079| |br|

       .. _BZ:2004B:
   * - [BZ:2004B]
     - :math:`B \to \pi, K, \eta` decay formfactors from light-cone sum rules
     - |badge-hep-ph/0406261| |br|

       .. _BZ:2004C:
   * - [BZ:2004C]
     - New results on :math:`B \to \pi, K, \eta` decay formfactors from light-cone sum rules
     - |badge-hep-ph/0406232| |br|

       .. _BaBar:2004A:
   * - [BaBar:2004A]
     - Measurement of the :math:`B \to X_s \ell^+ \ell^-` branching fraction with a sum over exclusive modes
     -

       .. _BaBar:2007A:
   * - [BaBar:2007A]
     - Measurement of decay amplitudes of :math:`B \to J/\psi K^{*}, \psi(2S) K^{*}`, and :math:`\chi_{c1} K^{*}` with an angular analysis
     -

       .. _BaBar:2007B:
   * - [BaBar:2007B]
     - Study of the Exclusive Initial-State-Radiation Production of the D anti-D System
     - |badge-0710.1371| |br|

       .. _BaBar:2008A:
   * - [BaBar:2008A]
     - Measurement of Time-Dependent CP Asymmetry in :math:`B^0 \to K^0_{S} \pi^0 \gamma` Decays
     -

       .. _BaBar:2008B:
   * - [BaBar:2008B]
     - Observation of :math:`B^{+} \to \eta \rho^{+}` and search for :math:`B^0` decays to :math:`\eta^\prime \eta`, :math:`\eta \pi^0`, :math:`\eta` ' :math:`\pi^0`, and :math:`\omega \pi^0`
     - |badge-0804.2422| |br|

       .. _BaBar:2009A:
   * - [BaBar:2009A]
     - Measurement of Branching Fractions and CP and Isospin Asymmetries in :math:`B \to  K^*(892)\gamma` Decays
     -

       .. _BaBar:2009B:
   * - [BaBar:2009B]
     - B meson decays to charmless meson pairs containing eta or eta' mesons
     -

       .. _BaBar:2010A:
   * - [BaBar:2010A]
     - Study of :math:`B \to \pi \ell \nu` and :math:`B \to \rho \ell \nu` Decays and Determination of :math:`|V_{ub}|`
     -

       .. _BaBar:2010B:
   * - [BaBar:2010B]
     - Measurement of the :math:`B^0 \to \pi^\ell \ell^+ \nu` and :math:`B^+ \to \eta^{(')} \ell^+ \nu` Branching Fractions, the :math:`B^0 \to \pi^- \ell^+ \nu` and :math:`B^+ \to \eta \ell^+ \nu` Form-Factor Shapes, and Determination of :math:`|V_{ub}|`
     - |badge-1010.0987| |br|

       .. _BaBar:2010C:
   * - [BaBar:2010C]
     - Exclusive Production of :math:`D^+_s D^-_s`, :math:`D^{*+}_s D^-_s`, and :math:`D^{*+}_s D^{*-}_s` via :math:`e^+ e^-` Annihilation with Initial-State-Radiation
     - |badge-1008.0338| |br|

       .. _BaBar:2012A:
   * - [BaBar:2012A]
     - Measurement of Branching Fractions and Rate Asymmetries in the Rare Decays :math:`B \to K^{(*)} l^+ l^-`
     - |badge-1204.3933| |br|

       .. _BaBar:2012B:
   * - [BaBar:2012B]
     - Angular Analysis of :math:`B \to K^*\ell^+\ell^-` in BABAR
     - |badge-1301.1700| |br|

       .. _BaBar:2012C:
   * - [BaBar:2012C]
     - Measurement of B(:math:`B\to X_s \gamma`), the :math:`B\to X_s \gamma` photon energy spectrum, and the direct CP asymmetry in :math:`B\to X_{s+d} \gamma` decays
     - |badge-1207.5772| |br|

       .. _BaBar:2012D:
   * - [BaBar:2012D]
     - Branching fraction and form-factor shape measurements of exclusive charmless semileptonic B decays, and determination of :math:`|V_{ub}|`
     -

       .. _BaBar:2013A:
   * - [BaBar:2013A]
     - Measurement of the :math:`B \to X_s \ell^+\ell^-` branching fraction and search for direct CP violation from a sum of exclusive final states
     - |badge-1312.5364| |br|

       .. _Belle-II:2023A:
   * - [Belle-II:2023A]
     - Measurement of the :math:`B^{0} \rightarrow D^{*-} \ell^{+} \nu_{\ell}` branching ratio and :math:`|V_{cb}|` with a fully reconstructed accompanying :math:`B` meson in 2019-2021 Belle II data
     - |badge-2301.04716| |br|

       .. _Belle-II:2023B:
   * - [Belle-II:2023B]
     - Tests of Light-Lepton Universality in Angular Asymmetries of :math:`B^0 \rightarrow D^{*-} \ell^{+} \nu` Decays
     - |badge-2308.02023| |br|

       .. _Belle-II:2023C:
   * - [Belle-II:2023C]
     - Determination of :math:`|V_{cb}|` using :math:`B^0 \rightarrow D^{*+} \ell^{-} \bar\nu` decays with Belle II
     - |badge-2310.01170| |br|

       .. _Belle-II:2023D:
   * - [Belle-II:2023D]
     - Search for the decay :math:`B_s^0 \to \pi^0 \pi^0` at Belle
     - |badge-2301.08587| |br|

       .. _Belle:2004A:
   * - [Belle:2004A]
     - Measurement of the :math:`B \to  K^* \gamma` branching fractions and asymmetries
     - |badge-hep-ex/0402042| |br|

       .. _Belle:2005A:
   * - [Belle:2005A]
     - Improved measurement of the electroweak penguin process :math:`B \to X_s \ell^+ \ell^-`
     - |badge-hep-ex/0503044| |br|

       .. _Belle:2006A:
   * - [Belle:2006A]
     - Time-Dependent CP Asymmetries in :math:`B^0 \to  K^0_S \pi^0 \gamma` transitions
     - |badge-hep-ex/0608017| |br|

       .. _Belle:2006B:
   * - [Belle:2006B]
     - Observation of B decays to two kaons
     - |badge-hep-ex/0608049| |br|

       .. _Belle:2008A:
   * - [Belle:2008A]
     - Measurement of the Moments of the Photon Energy Spectrum in :math:`B \to X_s \gamma` Decays and Determination of :math:`|V_{cb}|` and :math:`m_b` at Belle
     - |badge-0803.2158| |br|

       .. _Belle:2008B:
   * - [Belle:2008B]
     - Measurement of the near-threshold :math:`e^+ e^- \to D \bar{D}` cross section using initial-state radiation
     - |badge-0708.0082| |br|

       .. _Belle:2008C:
   * - [Belle:2008C]
     - High-Statistics Study of the $\tau^- \to \pi^- \pi^0 \nu_\tau Decay
     - |badge-0805.3773| |br|

       .. _Belle:2009A:
   * - [Belle:2009A]
     - Measurement of the Differential Branching Fraction and Forward-Backword Asymmetry for :math:`B \to K^{(*)}\ell^+\ell^-`
     - |badge-0904.0770| |br|

       .. _Belle:2009B:
   * - [Belle:2009B]
     - Measurement of Inclusive Radiative B-meson Decays with a Photon Energy Threshold of 1.7-GeV
     - |badge-0907.1384| |br|

       .. _Belle:2010A:
   * - [Belle:2010A]
     - Measurement of the decay :math:`B^0\to\pi^-\ell^+\nu` and determination of :math:`|V_{ub}|`
     - |badge-1012.0090| |br|

       .. _Belle:2010B:
   * - [Belle:2010B]
     - Measurement of :math:`e^+e^-\to D_s^{(*)+} D_s^{(*)-}` cross sections near threshold using initial-state radiation
     - |badge-1011.4397| |br|

       .. _Belle:2010C:
   * - [Belle:2010C]
     - Search for :math:`B_s^0 \to hh` Decays at the :math:`\Upsilon(5S)` Resonance
     - |badge-1006.5115| |br|

       .. _Belle:2013A:
   * - [Belle:2013A]
     - Study of Exclusive :math:`B \to X_u \ell \nu` Decays and Extraction of :math:`\|V_{ub}\|` using Full Reconstruction Tagging at the Belle Experiment
     - |badge-1306.2781| |br|

       .. _Belle:2014A:
   * - [Belle:2014A]
     - Measurement of the branching fraction of :math:`B^+ \to \tau^+ \nu_\tau` decays with the semileptonic tagging method and the full Belle data sample
     - |badge-1409.5269| |br|

       .. _Belle:2015A:
   * - [Belle:2015A]
     - Measurement of the decay :math:`B\to D\ell\nu_\ell` in fully reconstructed events and determination of the Cabibbo-Kobayashi-Maskawa matrix element :math:`|V_{cb}|`
     - |badge-1510.03657| |br|

       .. _Belle:2015B:
   * - [Belle:2015B]
     - Evidence for the decay :math:`B^{0} \to \eta \pi^0`}
     - |badge-1504.00957| |br|

       .. _Belle:2016A:
   * - [Belle:2016A]
     - Lepton-Flavor-Dependent Angular Analysis of :math:`B\to K^\ast \ell^+\ell^-`
     - |badge-1612.05014| |br|

       .. _Belle:2017A:
   * - [Belle:2017A]
     - Precise determination of the CKM matrix element :math:`\left| V_{cb}\right|` with :math:`\bar B^0 \to D^{*\,+} \, \ell^- \, \bar \nu_\ell` decays with hadronic tagging at Belle
     - |badge-1702.01521| |br|

       .. _Belle:2017B:
   * - [Belle:2017B]
     - Measurement of the CKM matrix element :math:`|V_{cb}|` from :math:`B^0\to D^{*-}\ell^ {+} \nu_\ell` at Belle
     - |badge-1809.03290| |br|

       .. _Belle:2017C:
   * - [Belle:2017C]
     - Angular analysis of the :math:`e^+ e^- \to D^{(*) \pm} D^{* \mp}` process near the open charm threshold using initial-state radiation
     - |badge-1707.09167| |br|

       .. _Belle:2019A:
   * - [Belle:2019A]
     - Search for :math:`B^+\to \mu^+\nu_{\mu}` and :math:`B^+\to \mu^+N` with inclusive tagging
     - |badge-1911.03186| |br|

       .. _Belle:2019B:
   * - [Belle:2019B]
     - Test of Lepton-Flavor Universality in :math:`{B\to K^\ast\ell^+\ell^-}` Decays at Belle
     - |badge-1904.02440| |br|

       .. _Belle:2019C:
   * - [Belle:2019C]
     - Test of lepton flavor universality and search for lepton flavor violation in :math:`B \rightarrow K\ell \ell` decays
     - |badge-1908.01848| |br|

       .. _Belle:2021A:
   * - [Belle:2021A]
     - Search for the decay :math:`B_s^0 \rightarrow \eta \eta`
     - |badge-2111.14437| |br|

       .. _Belle:2021B:
   * - [Belle:2021B]
     - Search for the Decay :math:`B_s^0 \rightarrow \eta^\prime \eta`
     - |badge-2106.09695| |br|

       .. _C:2006A:
   * - [C:2006A]
     - Note on fast polylogarithm computation
     -

       .. _C:2010A:
   * - [C:2010A]
     - The Amoroso Distribution
     - |badge-1005.3274| |br|

       .. _CBHKSS:1995A:
   * - [CBHKSS:1995A]
     - Partial wave analysis in K-matrix formalism
     -

       .. _CCH:2017A:
   * - [CCH:2017A]
     - No go theorem for nonstandard explanations of the :math:`\tau \to K \pi \nu_\tau` CP asymmetry'
     - |badge-1712.06595| |br|

       .. _CDF:2011A:
   * - [CDF:2011A]
     - Observation of the Baryonic Flavor-Changing Neutral Current Decay :math:`\Lambda_{b} \to \Lambda \mu^{+} \mu^{-}`
     -

       .. _CDF:2011B:
   * - [CDF:2011B]
     - Measurements of the Angular Distributions in the Decays :math:`B \to K^{(*)} \mu^+ \mu^-` at CDF
     - |badge-1108.0695| |br|

       .. _CDF:2011C:
   * - [CDF:2011C]
     - Measurement of the CP-Violating Phase :math:`\beta_s^{J/\psi\phi}` in :math:`B^0_s \to J/\psi \phi` Decays with the CDF II Detector
     - |badge-1112.1726| |br|

       .. _CDF:2012A:
   * - [CDF:2012A]
     - Precise measurements of exclusive :math:`b \to s \mu^+ \mu^-` decay amplitudes using the full CDF data set
     -

       .. _CERN:2003A:
   * - [CERN:2003A]
     - The CKM matrix and the unitarity triangle. Workshop, CERN, Geneva, Switzerland, 13-16 Feb 2002: Proceedings
     -

       .. _CHS:2018A:
   * - [CHS:2018A]
     - Two-pion contribution to hadronic vacuum polarization
     - |badge-1810.00007| |br|

       .. _CKMfitter:2004A:
   * - [CKMfitter:2004A]
     - CP violation and the CKM matrix: Assessing the impact of the asymmetric :math:`B` factories
     - |badge-hep-ph/0406184| |br|

       .. _CKS:2000A:
   * - [CKS:2000A]
     - RunDec: A Mathematica package for running and decoupling of the strong coupling and quark masses
     - |badge-hep-ph/0004189| |br|

       .. _CLEO:2000A:
   * - [CLEO:2000A]
     - Study of exclusive radiative B meson decays
     - |badge-hep-ex/9912057| |br|

       .. _CLEO:2000B:
   * - [CLEO:2000B]
     - Hadronic structure in the decay $\tau \to \pi^- \pi^0 \nu_\tau
     - |badge-hep-ex/9910046| |br|

       .. _CLEO:2008A:
   * - [CLEO:2008A]
     - Measurement of Charm Production Cross Sections in :math:`e^+ e^-` Annihilation at Energies between 3.97 and 4.26-GeV
     - |badge-0801.3418| |br|

       .. _CMD3:2023A:
   * - [CMD3:2023A]
     - Measurement of the :math:`e^+e^-\to\pi^+\pi^-` cross section from threshold to 1.2~GeV with the CMD-3 detector
     - |badge-2302.08834| |br|

       .. _CMM:1996A:
   * - [CMM:1996A]
     - Weak radiative B meson decay beyond leading logarithms
     - |badge-hep-ph/9612313| |br|

       .. _CMM:1997A:
   * - [CMM:1997A]
     - :math:`|\Delta F| = 1` nonleptonic effective Hamiltonian in a simpler scheme
     - |badge-hep-ph/9711280| |br|

       .. _CMS+LHCb:2014A:
   * - [CMS+LHCb:2014A]
     - Observation of the rare :math:`B^0_s\to\mu^+\mu^-` decay from the combined analysis of CMS and LHCb data
     - |badge-1411.4413| |br|

       .. _CMS:2013A:
   * - [CMS:2013A]
     - Angular analysis and branching fraction measurement of the decay :math:`B^0 \to K^{*0} \mu^+\mu^-`
     - |badge-1308.3409| |br|

       .. _CMS:2013B:
   * - [CMS:2013B]
     - Measurement of the :math:`B^0_s \to \mu^+ \mu^-` Branching Fraction and Search for :math:`B^0 \to \mu^+ \mu^-` with the CMS Experiment
     - |badge-1307.5025| |br|

       .. _CMS:2015A:
   * - [CMS:2015A]
     - Angular analysis of the decay :math:`B^0 \to K^{*0} \mu^+ \mu^-` from pp collisions at :math:`\sqrt s = 8` TeV
     - |badge-1507.08126| |br|

       .. _CMS:2016A:
   * - [CMS:2016A]
     - Search and measurement of the :math:`B \to \mu^+\mu^-` rare processes with LHC Run I data
     - |badge-1957565| |br|

       .. _CMS:2019A:
   * - [CMS:2019A]
     - Measurement of properties of :math:`B_s^0 \to \mu^+\mu^-` decays and search for :math:`B^0 \to \mu^+\mu^-` with the CMS experiment
     - |badge-2684828| |br|

       .. _CMS:2020A:
   * - [CMS:2020A]
     - Angular analysis of the decay B:math:`^+` :math:`\to` K:math:`^*`(892):math:`^+\mu^+\mu^-` in proton-proton collisions at :math:`\sqrt{s} = 8` TeV
     - |badge-2010.13968| |br|

       .. _CMS:2020B:
   * - [CMS:2020B]
     - Measurement of the :math:`CP`-violating phase :math:`\phi_\mathrm{s}` in the B:math:`^0_\mathrm{s}\to` J:math:`/\psi\, \phi`(1020) :math:`\to \mu^+\mu^-`K:math:`^+`K:math:`^-` channel in proton-proton collisions at :math:`\sqrt{s} =` 13 TeV
     - |badge-2007.02434| |br|

       .. _D0:2011A:
   * - [D0:2011A]
     - Measurement of the CP-violating phase :math:`\phi_s^{J/\psi \phi}` using the flavor-tagged decay :math:`B_s^0 \rightarrow J/\psi \phi` in 8 fb:math:`^{-1}` of :math:`p \bar p` collisions
     - |badge-1109.3166| |br|

       .. _DBG:2013A:
   * - [DBG:2013A]
     - Effective theory approach to new physics in :math:`b \to u` and :math:`b \to c` leptonic and semileptonic decays
     - |badge-1307.6653| |br|

       .. _DD:2020A:
   * - [DD:2020A]
     - The :math:`\Lambda_b\to\Lambda^\ast(1520)(\to N\!\bar{K})\ell^+\ell^-` decay at low-recoil in HQET
     - |badge-2003.08366| |br|

       .. _DDHLMSW:2019A:
   * - [DDHLMSW:2019A]
     - Neutral B-meson mixing from full lattice QCD at the physical point
     - |badge-1907.01025| |br|

       .. _DDKL:2013A:
   * - [DDKL:2013A]
     - Prediction of the :math:`D_s^*` width from a calculation of its radiative decay in full lattice QCD
     - |badge-1312.5264| |br|

       .. _DDS:2014A:
   * - [DDS:2014A]
     - Azimuthal :math:`B \to D^{*} \tau^{-} \bar{\nu_\tau}` angular distribution with tensor operators
     - |badge-1405.3719| |br|

       .. _DHK:2015A:
   * - [DHK:2015A]
     - A model-independent analysis of final-state interactions in :math:` {\overline{B}}_{d/s}^0\to J/\psi \pi \pi `
     - |badge-1508.06841| |br|

       .. _DHMV:2015A:
   * - [DHMV:2015A]
     - Global analysis of :math:`b\to s\ell\ell` anomalies
     - |badge-1510.04239| |br|

       .. _DKMMO:2008A:
   * - [DKMMO:2008A]
     - Light-cone sum rules for :math:`B \to \pi` form factors revisited
     - |badge-0801.1796| |br|

       .. _DKMR:2017A:
   * - [DKMR:2017A]
     - Phenomenology of :math:` {\Lambda}_b\to {\Lambda}_c\tau {\overline{\nu}}_{\tau} ` using lattice QCD calculations
     - |badge-1702.02243| |br|

       .. _DLKLR:2019A:
   * - [DLKLR:2019A]
     - :math:`\Delta M_s` theory precision confronts flavour anomalies
     - |badge-1909.11087| |br|

       .. _DLM:2015A:
   * - [DLM:2015A]
     - :math:`\Lambda_b \to p \ell^- \bar{\nu}_\ell` and :math:`\Lambda_b \to \Lambda_c \ell^- \bar{\nu}_\ell` form factors from lattice QCD with relativistic heavy quarks
     - |badge-1503.01421| |br|

       .. _DLMW:2012A:
   * - [DLMW:2012A]
     - :math:`\Lambda_b\to\Lambda \ell^+\ell^-` form factors and differential branching fraction from lattice QCD
     - |badge-1212.4827| |br|

       .. _DM:2008A:
   * - [DM:2008A]
     - :math:`B, B_s \to K` form factors: An update of light-cone sum rule results
     - |badge-0805.4170| |br|

       .. _DM:2016A:
   * - [DM:2016A]
     - :math:`\Lambda_b \to \Lambda \ell^+ \ell^-` form factors, differential branching fraction, and angular observables from lattice QCD with relativistic :math:`b` quarks
     - |badge-1602.01399| |br|

       .. _DMRV:2012A:
   * - [DMRV:2012A]
     - Implications from clean observables for the binned analysis of :math:`B \to K*\mu^+\mu^-` at large recoil
     - |badge-1207.2753| |br|

       .. _DN:2019A:
   * - [DN:2019A]
     - Angular analysis of the rare decay :math:`\Lambda_b\to \Lambda(1520)(\to NK)\ell^+\ell^-`
     - |badge-1903.00448| |br|

       .. _EGN:2010A:
   * - [EGN:2010A]
     - Power suppressed effects in :math:`\bar{B} \to X_s \gamma` at :math:`O(\alpha_s)`
     - |badge-0911.2175| |br|

       .. _EHMRR:2010A:
   * - [EHMRR:2010A]
     - New physics reach of the decay mode :math:`\bar{B} \to \bar{K}^{*0}\ell^+\ell^-`
     - |badge-1005.0571| |br|

       .. _ETM:2017A:
   * - [ETM:2017A]
     - Masses and decay constants of :math:`D^*_{(s)}` and :math:`B^*_{(s)}` mesons with :math:`N_f = 2 + 1 + 1` twisted mass fermions
     - |badge-1707.04529| |br|

       .. _ETM:2017B:
   * - [ETM:2017B]
     - Scalar and vector form factors of :math:`D \to \pi(K) \ell \nu` decays with :math:`N_f=2+1+1` twisted fermions
     - |badge-1706.03017| |br|

       .. _ETM:2018A:
   * - [ETM:2018A]
     - Tensor form factor of :math:`D \to \pi(K) \ell \nu` and :math:`D \to \pi(K) \ell \ell` decays with :math:`N_f=2+1+1` twisted-mass fermions
     - |badge-1803.04807| |br|

       .. _F:2012A:
   * - [F:2012A]
     - On Branching Ratios of :math:`B_s` Decays and the Search for New Physics in :math:`B^0_s\to \mu^+\mu^-`
     - |badge-1208.2843| |br|

       .. _FFKMvD:2013A:
   * - [FFKMvD:2013A]
     - Disentangling the Decay Observables in :math:`B^- \to \pi^+\pi^-\ell^-\bar\nu_\ell`
     - |badge-1310.6660| |br|

       .. _FK:2002A:
   * - [FK:2002A]
     - Mixing of pseudoscalar mesons
     - |badge-hep-ph/0201044| |br|

       .. _FKKM:2008A:
   * - [FKKM:2008A]
     - :math:`B \to D^{(*)}` Form Factors from QCD Light-Cone Sum Rules
     - |badge-0809.0222| |br|

       .. _FLAG:2013A:
   * - [FLAG:2013A]
     - Review of lattice results concerning low-energy particle physics
     - |badge-1310.8555| |br|

       .. _FLAG:2021A:
   * - [FLAG:2021A]
     - FLAG Review 2021
     - |badge-2111.09849| |br|

       .. _FLS:2021A:
   * - [FLS:2021A]
     - A Tale of Invisibility: Constraints on New Physics in :math:`b\to s\nu\nu`
     - |badge-2111.04327| |br|

       .. _FLvD:2022A:
   * - [FLvD:2022A]
     - Systematic Parametrization of the Leading :math:`B`-meson Light-Cone Distribution Amplitude
     - |badge-2203.15679| |br|

       .. _FM:2002A:
   * - [FM:2002A]
     - Forward backward and isospin asymmetry for :math:`B \to K^* \ell^+ \ell^-` decay in the standard model and in supersymmetry
     - |badge-hep-ph/0212158| |br|

       .. _FNAL+MILC:2014A:
   * - [FNAL+MILC:2014A]
     - Update of :math:`|V_{cb}|` from the :math:`\bar{B}\to D^*\ell\bar{\nu}` form factor at zero recoil with three-flavor lattice QCD
     - |badge-1403.0635| |br|

       .. _FNAL+MILC:2015A:
   * - [FNAL+MILC:2015A]
     - :math:`|V_{ub}|` from :math:`B\to\pi\ell\nu` decays and (2+1)-flavor lattice QCD
     - |badge-1503.07839| |br|

       .. _FNAL+MILC:2015B:
   * - [FNAL+MILC:2015B]
     - :math:`B\to D\ell\nu` form factors at nonzero recoil and :math:`|V_{cb}|` from 2+1-flavor lattice QCD
     - |badge-1503.07237| |br|

       .. _FNAL+MILC:2015C:
   * - [FNAL+MILC:2015C]
     - :math:`B\to\pi\ell\ell` form factors for new-physics searches from lattice QCD
     - |badge-1507.01618| |br|

       .. _FNAL+MILC:2015D:
   * - [FNAL+MILC:2015D]
     - :math:`B\to Kl^+l^-` Decay Form Factors from Three-Flavor Lattice QCD
     - |badge-1509.06235| |br|

       .. _FNAL+MILC:2017A:
   * - [FNAL+MILC:2017A]
     - :math:`B`- and :math:`D`-meson leptonic decay constants from four-flavor lattice QCD
     - |badge-1712.09262| |br|

       .. _FNAL+MILC:2019A:
   * - [FNAL+MILC:2019A]
     - :math:`\bar{B}_s \to K\ell\nu` decay from lattice QCD
     - |badge-1901.02561| |br|

       .. _FNAL+MILC:2021A:
   * - [FNAL+MILC:2021A]
     - Semileptonic form factors for :math:`B\rightarrow D^*\ell \nu ` at nonzero recoil from :math:`2+1`-flavor lattice QCD
     - |badge-2105.14019| |br|

       .. _FTW:2016A:
   * - [FTW:2016A]
     - On the reduction of generalized polylogarithms to :math:`\text{Li}_n` and :math:`\text{Li}_{2,2}` and on the evaluation thereof
     - |badge-1601.02649| |br|

       .. _FY:2011A:
   * - [FY:2011A]
     - Form Factors for :math:`Lambda_b \to \Lambda` Transitions in {SCET}
     - |badge-1111.1844| |br|

       .. _FvDV:2018A:
   * - [FvDV:2018A]
     - Revisiting :math:`B \to \pi\pi \ell \nu` at large dipion masses
     - |badge-1807.01924| |br|

       .. _GKPR:2013A:
   * - [GKPR:2013A]
     - Decay constants of heavy-light vector mesons from QCD sum rules
     - |badge-1305.5432| |br|

       .. _GKvD:2018A:
   * - [GKvD:2018A]
     - :math:`B\to P` and :math:`B\to V` Form Factors from :math:`B`-Meson Light-Cone Sum Rules beyond Leading Twist
     - |badge-1811.00983| |br|

       .. _GM:2001A:
   * - [GM:2001A]
     - Quark mass effects in :math:`\bar{B} \to X_s \gamma`
     - |badge-hep-ph/0104034| |br|

       .. _GMKPRDEY:2011A:
   * - [GMKPRDEY:2011A]
     - The Pion-pion scattering amplitude. IV: Improved analysis with once subtracted Roy-like equations up to 1100 MeV
     - |badge-1102.2183| |br|

       .. _GN:1997A:
   * - [GN:1997A]
     - Searching for new physics in rare :math:`B \to \tau` decays
     - |badge-hep-ph/9707371| |br|

       .. _GP:2004A:
   * - [GP:2004A]
     - Exclusive rare :math:`B \to K^*\ell^+\ell^-` decays at low recoil: Controlling the long-distance effects
     - |badge-hep-ph/0404250| |br|

       .. _GR:1992A:
   * - [GR:1992A]
     - Inference from Iterative Simulation Using Multiple Sequences
     -

       .. _GR:2004A:
   * - [GR:2004A]
     - Hierarchical clustering of a mixture model
     -

       .. _GvDV:2020A:
   * - [GvDV:2020A]
     - Non-local matrix elements in :math:`B_{(s)}\to \{K^{(*)},\phi\}\ell^+\ell^-`
     - |badge-2011.09813| |br|

       .. _HFLAV:2019A:
   * - [HFLAV:2019A]
     - Averages of :math:`b`-hadron, :math:`c`-hadron, and :math:`\tau`-lepton properties as of 2018
     - |badge-1909.12524| |br|

       .. _HKvT:2025A:
   * - [HKvT:2025A]
     - A model-independent parameterization of :math:`B\rightarrow\pi\pi\ell\nu` decays
     - |badge-2502.xxxxx| |br|

       .. _HLMW:2005A:
   * - [HLMW:2005A]
     - Electromagnetic logarithms in :math:`\bar B \to  X_s \ell^+ \ell^-`
     - |badge-hep-ph/0512066| |br|

       .. _HLMW:2013A:
   * - [HLMW:2013A]
     - Lattice QCD calculation of form factors describing the rare decays :math:`B \to K^* \ell^+ \ell^-` and :math:`B_s \to \phi \ell^+ \ell^-`
     - |badge-1310.3722| |br|

       .. _HLMW:2015A:
   * - [HLMW:2015A]
     - Rare :math:`B` decays using lattice QCD form factors
     - |badge-1501.00367| |br|

       .. _HPQCD:2014A:
   * - [HPQCD:2014A]
     - :math:`B_s \to K \ell \nu` form factors from lattice QCD
     - |badge-1406.2279| |br|

       .. _HPQCD:2015A:
   * - [HPQCD:2015A]
     - :math:`B \rightarrow D l \nu` form factors at nonzero recoil and extraction of :math:`|V_{cb}|`
     - |badge-1505.03925| |br|

       .. _HPQCD:2015B:
   * - [HPQCD:2015B]
     - :math:`B`-meson decay constants: a more complete picture from full lattice QCD
     - |badge-1503.05762| |br|

       .. _HPQCD:2017A:
   * - [HPQCD:2017A]
     - Lattice QCD calculation of the :math:`{{B}_{(s)}\to D_{(s)}^{*}\ell{\nu}}` form factors at zero recoil and implications for :math:`{|V_{cb}|}`
     - |badge-1711.11013| |br|

       .. _HPQCD:2021A:
   * - [HPQCD:2021A]
     - Improved :math:`V_{cs}` determination using precise lattice QCD form factors for :math:`D \to K \ell \nu`
     - |badge-2104.09883| |br|

       .. _HPQCD:2022A:
   * - [HPQCD:2022A]
     - :math:`B\to K` and :math:`D\to K` form factors from fully relativistic lattice QCD
     - |badge-2207.12468| |br|

       .. _HPQCD:2023A:
   * - [HPQCD:2023A]
     - :math:`B \rightarrow D^*` vector, axial-vector and tensor form factors for the full :math:`q^2` range from lattice QCD
     - |badge-2304.03137| |br|

       .. _HPQCDD:2013A:
   * - [HPQCDD:2013A]
     - Rare decay :math:`B \to K \ell^+ \ell^-` form factors from lattice QCD
     - |badge-1306.2384| |br|

       .. _IKKR:2007A:
   * - [IKKR:2007A]
     - B- to light-meson transition form-factors
     - |badge-nucl-th/0703094| |br|

       .. _IKMvD:2014A:
   * - [IKMvD:2014A]
     - Extrapolation and unitarity bounds for the :math:`B \to \pi` form factor
     - |badge-1409.7816| |br|

       .. _JLQCD:2023A:
   * - [JLQCD:2023A]
     - :math:`B \to D^*\ell\nu_\ell` semileptonic form factors from lattice QCD with M\"obius domain-wall quarks
     - |badge-2306.05657| |br|

       .. _JS:2018A:
   * - [JS:2018A]
     - Constraining new physics in :math:`b\to c\ell\nu` transitions
     - |badge-1801.01112| |br|

       .. _KKRvD:2024A:
   * - [KKRvD:2024A]
     - A Simple Parametrisation of the Pion Form Factor
     -

       .. _KKVDZ:2022A:
   * - [KKVDZ:2022A]
     - Dispersion relations for :math:`B^- \to \ell^- \bar{\nu}_\ell \ell^{\prime-} \ell^{\prime+}` form factors
     - |badge-2210.09832| |br|

       .. _KM:2005A:
   * - [KM:2005A]
     - Probing new physics via the transverse amplitudes of :math:`B^0\to K^{*0} (\to K^- \pi^+) \ell^+\ell^-` at large recoil
     - |badge-hep-ph/0502060| |br|

       .. _KMO:2005A:
   * - [KMO:2005A]
     - B-meson distribution amplitude from the :math:`B \to \pi` form-factor
     - |badge-hep-ph/0504091| |br|

       .. _KMO:2006A:
   * - [KMO:2006A]
     - Form-factors from light-cone sum rules with B-meson distribution amplitudes
     - |badge-hep-ph/0611193| |br|

       .. _KMPW:2010A:
   * - [KMPW:2010A]
     - Charm-loop effect in :math:`B \to K^{(*)} \ell^{+} \ell^{-}` and :math:`B\to K^*\gamma`
     - |badge-1006.4945| |br|

       .. _KR:2017A:
   * - [KR:2017A]
     - :math:`B_{s}\to K \ell \nu_\ell` and :math:`B_{(s)} \to \pi (K) \ell^+\ell^-` decays at large recoil and CKM matrix elements
     - |badge-1703.04765| |br|

       .. _KS:1996A:
   * - [KS:1996A]
     - Lepton polarization in the decays :math:`B \to X_s \mu^+ \mu^-` and :math:`B \to X_s \tau^+ \tau^-`
     - |badge-hep-ph/9603237| |br|

       .. _LATAVG:2011A:
   * - [LATAVG:2011A]
     - Lattice QCD inputs to the CKM unitarity triangle analysis
     - |badge-0910.2928| |br|

       .. _LHCb:2011A:
   * - [LHCb:2011A]
     - Search for the rare decay :math:`B^0_s \to \mu^+ \mu^-` with the CMS and LHCb experiments
     - |badge-1374913| |br|

       .. _LHCb:2011B:
   * - [LHCb:2011B]
     - Differential branching fraction and angular analysis of the decay :math:`B^{0} \to K^{*0} \mu^+ \mu^-`
     -

       .. _LHCb:2012A:
   * - [LHCb:2012A]
     - Rare Beauty and Charm Decays at LHCb
     -

       .. _LHCb:2012B:
   * - [LHCb:2012B]
     - Rare decays in LHCb
     -

       .. _LHCb:2012C:
   * - [LHCb:2012C]
     - Differential branching fraction and angular analysis of the :math:`B^{+} \rightarrow K^{+}\mu^{+}\mu^{-}` decay
     - |badge-1209.4284| |br|

       .. _LHCb:2012D:
   * - [LHCb:2012D]
     - First Evidence for the Decay :math:`B_s^0 \to \mu^+ \mu^-`
     - |badge-1211.2674| |br|

       .. _LHCb:2012E:
   * - [LHCb:2012E]
     - Measurement of the :math:`C\!P` asymmetry in :math:`B^0 \to K^{*0} \mu^+ \mu^-` decays
     - |badge-1210.4492| |br|

       .. _LHCb:2012F:
   * - [LHCb:2012F]
     - Measurement of :math:`b`-hadron branching fractions for two-body decays into charmless charged hadrons
     - |badge-1206.2794| |br|

       .. _LHCb:2013A:
   * - [LHCb:2013A]
     - Measurement of CP violation and the :math:`B^0_s` meson decay width difference with :math:`B^0_s \to J/\psi K^+K^-` and :math:`B^0_s \to J/\psi \pi^+\pi^-` decays
     - |badge-1304.2600| |br|

       .. _LHCb:2013B:
   * - [LHCb:2013B]
     - Differential branching fraction and angular analysis of the decay :math:`B^{0} \to K^{*0} \mu^{+}\mu^{-}`
     - |badge-1304.6325| |br|

       .. _LHCb:2013C:
   * - [LHCb:2013C]
     - Studies of Electroweak Penguin Transitions in :math:`b \to s \mu \mu`
     -

       .. _LHCb:2013D:
   * - [LHCb:2013D]
     - Measurement of the :math:`B^0_s \to \mu^+ \mu^-` branching fraction and search for :math:`B^0 \to \mu^+ \mu^-` decays at the LHCb experiment
     - |badge-1307.5024| |br|

       .. _LHCb:2013E:
   * - [LHCb:2013E]
     - Measurement of the polarization amplitudes  in :math:`B^0 \to J/\psi K^{*}(892)^0` decays
     - |badge-1307.2782| |br|

       .. _LHCb:2013F:
   * - [LHCb:2013F]
     - Branching fraction and CP asymmetry of the decays :math:`B^+ \to K^0_s \pi^+` and :math:`B^+ \to K^0_s K^+`
     - |badge-1308.1277| |br|

       .. _LHCb:2014A:
   * - [LHCb:2014A]
     - Differential branching fractions and isospin asymmetries of :math:`B \to K^{(*)} \mu^+ \mu^-` decays
     - |badge-1403.8044| |br|

       .. _LHCb:2014B:
   * - [LHCb:2014B]
     - Angular analysis of charged and neutral :math:`B \to K \mu^+\mu^-`  decays
     - |badge-1403.8045| |br|

       .. _LHCb:2014C:
   * - [LHCb:2014C]
     - Test of lepton universality using :math:`B^{+}\rightarrow K^{+}\ell^{+}\ell^{-}` decays
     - |badge-1406.6482| |br|

       .. _LHCb:2014D:
   * - [LHCb:2014D]
     - Precision measurement of :math:`CP` violation in :math:`B_s^0 \to J/\psi K^+K^-` decays
     - |badge-1411.3104| |br|

       .. _LHCb:2015A:
   * - [LHCb:2015A]
     - Angular analysis of the :math:`B^{0} \to K^{*0} \mu^{+} \mu^{-}` decay using 3 fb:math:`^{-1}` of integrated luminosity
     - |badge-1512.04442| |br|

       .. _LHCb:2015B:
   * - [LHCb:2015B]
     - Differential branching fraction and angular analysis of :math:`\Lambda^{0}_{b} \rightarrow \Lambda \mu^+\mu^-` decays
     - |badge-1503.07138| |br|

       .. _LHCb:2015C:
   * - [LHCb:2015C]
     - Angular analysis and differential branching fraction of the decay :math:`B^0_s\to\phi\mu^+\mu^-`
     - |badge-1506.08777| |br|

       .. _LHCb:2015D:
   * - [LHCb:2015D]
     - Observation of the :math:`B_s^0 \to \eta' \eta'` decay
     - |badge-1503.07483| |br|

       .. _LHCb:2016A:
   * - [LHCb:2016A]
     - Measurements of the S-wave fraction in :math:`B^{0}\rightarrow K^{+}\pi^{-}\mu^{+}\mu^{-}` decays and the :math:`B^{0}\rightarrow K^{\ast}(892)^{0}\mu^{+}\mu^{-}` differential branching fraction
     - |badge-1606.04731| |br|

       .. _LHCb:2016B:
   * - [LHCb:2016B]
     - First study of the CP-violating phase and decay-width difference in :math:`B_s^0\to\psi(2S)\phi` decays
     - |badge-1608.04855| |br|

       .. _LHCb:2016C:
   * - [LHCb:2016C]
     - Observation of the annihilation decay mode :math:`B^0 \to K^+ K^-`
     - |badge-1610.08288| |br|

       .. _LHCb:2017A:
   * - [LHCb:2017A]
     - Measurement of the :math:`B^0_s\to\mu^+\mu^-` branching fraction and effective lifetime and search for :math:`B^0\to\mu^+\mu^-` decays
     - |badge-1703.05747| |br|

       .. _LHCb:2017B:
   * - [LHCb:2017B]
     - Test of lepton universality with :math:`B^{0} \rightarrow K^{*0}\ell^{+}\ell^{-}` decays
     - |badge-1705.05802| |br|

       .. _LHCb:2018A:
   * - [LHCb:2018A]
     - Angular moments of the decay :math:`\Lambda_b^0 \rightarrow \Lambda \mu^{+} \mu^{-}` at low hadronic recoil
     - |badge-1808.00264| |br|

       .. _LHCb:2019A:
   * - [LHCb:2019A]
     - Updated measurement of time-dependent CP-violating observables in :math:`B^{0}_{s}\to J/\psi K^+ K^-` decays
     - |badge-1906.08356| |br|

       .. _LHCb:2020A:
   * - [LHCb:2020A]
     - Measurement of the shape of the :math:`B_s^0 \to D_s^{*-}\mu^{+}\nu_{\mu}` differential decay rate
     - |badge-2003.08453| |br|

       .. _LHCb:2020B:
   * - [LHCb:2020B]
     - Observation of :math:`CP` violation in two-body :math:` {B}_{(s)}^0 `-meson decays to charged pions and kaons
     - |badge-2012.05319| |br|

       .. _LHCb:2021A:
   * - [LHCb:2021A]
     - Branching fraction measurements of the rare :math:`B^0_s\rightarrow\phi\mu^+\mu^-` and :math:`B^0_s\rightarrow f_2^\prime(1525)\mu^+\mu^-` decays
     - |badge-2105.14007| |br|

       .. _LHCb:2021B:
   * - [LHCb:2021B]
     - Analysis of neutral :math:`B`-meson decays into two muons
     - |badge-2108.09284| |br|

       .. _LHCb:2021C:
   * - [LHCb:2021C]
     - First measurement of the :math:`CP`-violating phase in :math:`B^0_s\to J/\psi(\to e^+e^-)\phi` decays
     - |badge-2105.14738| |br|

       .. _LHCb:2021D:
   * - [LHCb:2021D]
     - Angular analysis of the rare decay :math:`B_s^0\to\phi\mu^+\mu^-`
     - |badge-2107.13428| |br|

       .. _LMPR:2022A:
   * - [LMPR:2022A]
     - Taming new physics in :math:`b \to c\bar{u} d(s)` with :math:`\tau(B^{+})/\tau(B_{d})` and :math:`{a}_{sl}^d`
     - |badge-2211.02724| |br|

       .. _LMPW:2015A:
   * - [LMPW:2015A]
     - Predicting positive parity :math:`B_s` mesons from lattice QCD
     - |badge-1501.01646| |br|

       .. _LMvD:2021A:
   * - [LMvD:2021A]
     - The :math:`\bar{B}\to \pi` form factors from QCD and their impact on :math:`|V_{ub}|`
     - |badge-2102.07233| |br|

       .. _LT:2007A:
   * - [LT:2007A]
     - Precise predictions for :math:`B \to  X_s l^+ l^-` in the large :math:`q^2` region
     - |badge-0707.1694| |br|

       .. _M:1999A:
   * - [M:1999A]
     - :math:`N_f` dependence of the quark condensate from a chiral sum rule
     - |badge-hep-ph/9909292| |br|

       .. _M:2006A:
   * - [M:2006A]
     - Estimate of :math:`\mathcal{B}(\bar B \to X_s \gamma)` at :math:`\mathcal{O}(\alpha_s^2)`
     - |badge-hep-ph/0609232| |br|

       .. _MR:2021A:
   * - [MR:2021A]
     - :math:`\Lambda_c\to\Lambda^*(1520)` form factors from lattice QCD and improved analysis of the :math:`\Lambda_b\to\Lambda^*(1520)` and :math:`\Lambda_b\to\Lambda_c^*(2595,2625)` form factors
     - |badge-2107.13140| |br|

       .. _MvD:2016A:
   * - [MvD:2016A]
     - Using :math:`\Lambda_b\to \Lambda\mu^+\mu^-` data within a Bayesian analysis of :math:`|\Delta B| = |\Delta S| = 1` decays
     - |badge-1603.02974| |br|

       .. _MvR:1999A:
   * - [MvR:1999A]
     - The Three loop relation between the :math:`\overline{\text{MS}}` and the pole quark masses
     - |badge-hep-ph/9912391| |br|

       .. _NA7:1986A:
   * - [NA7:1986A]
     - A Measurement of the Space - Like Pion Electromagnetic Form-Factor
     -

       .. _NT:2011A:
   * - [NT:2011A]
     - QCD Sum Rules for Quark-Gluon Three-Body Components in the B Meson
     - |badge-1109.6786| |br|

       .. _PDG:2008A:
   * - [PDG:2008A]
     - Review of Particle Physics
     -

       .. _PDG:2010A:
   * - [PDG:2010A]
     - Review of Particle Physics
     -

       .. _PDG:2012A:
   * - [PDG:2012A]
     - Review of Particle Physics
     -

       .. _PDG:2018A:
   * - [PDG:2018A]
     - Review of Particle Physics
     -

       .. _PDG:2020A:
   * - [PDG:2020A]
     - Review of Particle Physics
     -

       .. _PDG:2024A:
   * - [PDG:2024A]
     - Review of Particle Physics
     -

       .. _PS:1997A:
   * - [PS:1997A]
     - An Introduction to Quantum Field Theory
     -

       .. _PS:2023A:
   * - [PS:2023A]
     - Lepton Flavor Violation in Semileptonic Observables
     - |badge-2312.14070| |br|

       .. _PZ:2021A:
   * - [PZ:2021A]
     - Radiative decays of heavy-light mesons and the :math:` {f}_{H,{H}^{\ast },{H}_1}^{(T)} ` decay constants
     - |badge-2106.13617| |br|

       .. _RBC+UKQCD:2015A:
   * - [RBC+UKQCD:2015A]
     - :math:`B \to \pi \ell \nu` and :math:`B_s \to K \ell \nu` form factors and :math:`|V_{ub}|` from 2+1-flavor lattice QCD with domain-wall light quarks and relativistic heavy quarks
     - |badge-1501.05373| |br|

       .. _RBC+UKQCD:2023A:
   * - [RBC+UKQCD:2023A]
     - Exclusive semileptonic :math:`\bar{B}_s\to K\ell\bar\nu` decays on the lattice
     - |badge-2303.11280| |br|

       .. _RHK:2018A:
   * - [RHK:2018A]
     - A new parametrization for the scalar pion form factors
     - |badge-1809.06867| |br|

       .. _S:1982A:
   * - [S:1982A]
     - Large M_W and M_Z behaviour of the order alpha corrections to semileptonic processes mediated by W
     -

       .. _S:2004A:
   * - [S:2004A]
     - Analytic two loop virtual corrections to :math:`b \to d \ell^+ \ell^-`
     - |badge-hep-ph/0403185| |br|

       .. _S:2004B:
   * - [S:2004B]
     - Orthogonal polynomials on the unit circle: New results
     - |badge-math/0405111| |br|

       .. _S:2010A:
   * - [S:2010A]
     - The decay constants :math:`f_{D_s}`, :math:`f_{D^+}`, :math:`f_{B_s}` and :math:`f_B` from lattice QCD
     -

       .. _STTW:2013A:
   * - [STTW:2013A]
     - Testing leptoquark models in :math:`\bar B \to D^{(*)} \tau \bar\nu`
     - |badge-1309.0301| |br|

       .. _TEWWG:2010A:
   * - [TEWWG:2010A]
     - Combination of CDF and D0 Results on the Mass of the Top Quark Using Up to 5.6 :math:`fb^{-1}` of Data
     - |badge-1007.3178| |br|

       .. _U:2001A:
   * - [U:2001A]
     - On the chromomagnetic expectation value :math:`\mu^2_G` and higher power corrections in heavy flavor mesons
     - |badge-hep-ph/0111166| |br|

       .. _UTFIT:2013A:
   * - [UTFIT:2013A]
     - The Unitarity Triangle Fit in the Standard Model and Hadronic Parameters from Lattice QCD: A Reappraisal after the Measurements of :math:`\Delta m_s` and :math:`\mathcal{B}(B \to \tau \nu_\tau)`
     - |badge-hep-ph/0606167| |br|

       .. _vRVL:1997A:
   * - [vRVL:1997A]
     - The Four loop beta function in quantum chromodynamics
     - |badge-hep-ph/9701390| |br|



.. |badge-hep-ph/0109140| image:: https://img.shields.io/badge/arXiv-hep--ph/0109140-red.svg
   :target: https://arxiv.org/abs/hep-ph/0109140
   :alt: arXiv:hep-ph/0109140

.. |badge-0811.1214| image:: https://img.shields.io/badge/arXiv-0811.1214-red.svg
   :target: https://arxiv.org/abs/0811.1214
   :alt: arXiv:0811.1214

.. |badge-hep-ph/0312063| image:: https://img.shields.io/badge/arXiv-hep--ph/0312063-red.svg
   :target: https://arxiv.org/abs/hep-ph/0312063
   :alt: arXiv:hep-ph/0312063

.. |badge-hep-ph/9910221| image:: https://img.shields.io/badge/arXiv-hep--ph/9910221-red.svg
   :target: https://arxiv.org/abs/hep-ph/9910221
   :alt: arXiv:hep-ph/9910221

.. |badge-hep-ph/0211227| image:: https://img.shields.io/badge/arXiv-hep--ph/0211227-red.svg
   :target: https://arxiv.org/abs/hep-ph/0211227
   :alt: arXiv:hep-ph/0211227

.. |badge-1704.06639| image:: https://img.shields.io/badge/arXiv-1704.06639-red.svg
   :target: https://arxiv.org/abs/1704.06639
   :alt: arXiv:1704.06639

.. |badge-hep-ph/0112300| image:: https://img.shields.io/badge/arXiv-hep--ph/0112300-red.svg
   :target: https://arxiv.org/abs/hep-ph/0112300
   :alt: arXiv:hep-ph/0112300

.. |badge-2727207| image:: https://img.shields.io/badge/CDS-2727207-blue.svg
   :target: https://cds.cern.ch/record/2727207?ln=en
   :alt: CDS:2727207

.. |badge-1550950| image:: https://img.shields.io/badge/CDS-1550950-blue.svg
   :target: https://cds.cern.ch/record/1550950?ln=en
   :alt: CDS:1550950

.. |badge-1812.03017| image:: https://img.shields.io/badge/arXiv-1812.03017-red.svg
   :target: https://arxiv.org/abs/1812.03017
   :alt: arXiv:1812.03017

.. |badge-1805.04000| image:: https://img.shields.io/badge/arXiv-1805.04000-red.svg
   :target: https://arxiv.org/abs/1805.04000
   :alt: arXiv:1805.04000

.. |badge-2001.07115| image:: https://img.shields.io/badge/arXiv-2001.07115-red.svg
   :target: https://arxiv.org/abs/2001.07115
   :alt: arXiv:2001.07115

.. |badge-hep-ph/9804241| image:: https://img.shields.io/badge/arXiv-hep--ph/9804241-red.svg
   :target: https://arxiv.org/abs/hep-ph/9804241
   :alt: arXiv:hep-ph/9804241

.. |badge-2104.02094| image:: https://img.shields.io/badge/arXiv-2104.02094-red.svg
   :target: https://arxiv.org/abs/2104.02094
   :alt: arXiv:2104.02094

.. |badge-1801.08367| image:: https://img.shields.io/badge/arXiv-1801.08367-red.svg
   :target: https://arxiv.org/abs/1801.08367
   :alt: arXiv:1801.08367

.. |badge-1804.04962| image:: https://img.shields.io/badge/arXiv-1804.04962-red.svg
   :target: https://arxiv.org/abs/1804.04962
   :alt: arXiv:1804.04962

.. |badge-hep-ph/9802299| image:: https://img.shields.io/badge/arXiv-hep--ph/9802299-red.svg
   :target: https://arxiv.org/abs/hep-ph/9802299
   :alt: arXiv:hep-ph/9802299

.. |badge-hep-ph/9512380| image:: https://img.shields.io/badge/arXiv-hep--ph/9512380-red.svg
   :target: https://arxiv.org/abs/hep-ph/9512380
   :alt: arXiv:hep-ph/9512380

.. |badge-hep-ph/0603063| image:: https://img.shields.io/badge/arXiv-hep--ph/0603063-red.svg
   :target: https://arxiv.org/abs/hep-ph/0603063
   :alt: arXiv:hep-ph/0603063

.. |badge-hep-ph/0302262| image:: https://img.shields.io/badge/arXiv-hep--ph/0302262-red.svg
   :target: https://arxiv.org/abs/hep-ph/0302262
   :alt: arXiv:hep-ph/0302262

.. |badge-hep-ph/0006124| image:: https://img.shields.io/badge/arXiv-hep--ph/0006124-red.svg
   :target: https://arxiv.org/abs/hep-ph/0006124
   :alt: arXiv:hep-ph/0006124

.. |badge-0807.2722| image:: https://img.shields.io/badge/arXiv-0807.2722-red.svg
   :target: https://arxiv.org/abs/0807.2722
   :alt: arXiv:0807.2722

.. |badge-hep-ph/0203135| image:: https://img.shields.io/badge/arXiv-hep--ph/0203135-red.svg
   :target: https://arxiv.org/abs/hep-ph/0203135
   :alt: arXiv:hep-ph/0203135

.. |badge-hep-ph/0204225| image:: https://img.shields.io/badge/arXiv-hep--ph/0204225-red.svg
   :target: https://arxiv.org/abs/hep-ph/0204225
   :alt: arXiv:hep-ph/0204225

.. |badge-hep-ex/0102003| image:: https://img.shields.io/badge/arXiv-hep--ex/0102003-red.svg
   :target: https://arxiv.org/abs/hep-ex/0102003
   :alt: arXiv:hep-ex/0102003

.. |badge-hep-ex/0612054| image:: https://img.shields.io/badge/arXiv-hep--ex/0612054-red.svg
   :target: https://arxiv.org/abs/hep-ex/0612054
   :alt: arXiv:hep-ex/0612054

.. |badge-hep-ex/0605105| image:: https://img.shields.io/badge/arXiv-hep--ex/0605105-red.svg
   :target: https://arxiv.org/abs/hep-ex/0605105
   :alt: arXiv:hep-ex/0605105

.. |badge-2112.06477| image:: https://img.shields.io/badge/arXiv-2112.06477-red.svg
   :target: https://arxiv.org/abs/2112.06477
   :alt: arXiv:2112.06477

.. |badge-hep-ph/0008255| image:: https://img.shields.io/badge/arXiv-hep--ph/0008255-red.svg
   :target: https://arxiv.org/abs/hep-ph/0008255
   :alt: arXiv:hep-ph/0008255

.. |badge-1907.02257| image:: https://img.shields.io/badge/arXiv-1907.02257-red.svg
   :target: https://arxiv.org/abs/1907.02257
   :alt: arXiv:1907.02257

.. |badge-hep-ph/0106067| image:: https://img.shields.io/badge/arXiv-hep--ph/0106067-red.svg
   :target: https://arxiv.org/abs/hep-ph/0106067
   :alt: arXiv:hep-ph/0106067

.. |badge-hep-ph/0412400| image:: https://img.shields.io/badge/arXiv-hep--ph/0412400-red.svg
   :target: https://arxiv.org/abs/hep-ph/0412400
   :alt: arXiv:hep-ph/0412400

.. |badge-1004.3249| image:: https://img.shields.io/badge/arXiv-1004.3249-red.svg
   :target: https://arxiv.org/abs/1004.3249
   :alt: arXiv:1004.3249

.. |badge-1410.2115| image:: https://img.shields.io/badge/arXiv-1410.2115-red.svg
   :target: https://arxiv.org/abs/1410.2115
   :alt: arXiv:1410.2115

.. |badge-1608.07127| image:: https://img.shields.io/badge/arXiv-1608.07127-red.svg
   :target: https://arxiv.org/abs/1608.07127
   :alt: arXiv:1608.07127

.. |badge-1606.08030| image:: https://img.shields.io/badge/arXiv-1606.08030-red.svg
   :target: https://arxiv.org/abs/1606.08030
   :alt: arXiv:1606.08030

.. |badge-1912.09335| image:: https://img.shields.io/badge/arXiv-1912.09335-red.svg
   :target: https://arxiv.org/abs/1912.09335
   :alt: arXiv:1912.09335

.. |badge-hep-ph/9705252| image:: https://img.shields.io/badge/arXiv-hep--ph/9705252-red.svg
   :target: https://arxiv.org/abs/hep-ph/9705252
   :alt: arXiv:hep-ph/9705252

.. |badge-1409.4557| image:: https://img.shields.io/badge/arXiv-1409.4557-red.svg
   :target: https://arxiv.org/abs/1409.4557
   :alt: arXiv:1409.4557

.. |badge-1009.0947| image:: https://img.shields.io/badge/arXiv-1009.0947-red.svg
   :target: https://arxiv.org/abs/1009.0947
   :alt: arXiv:1009.0947

.. |badge-1707.09509| image:: https://img.shields.io/badge/arXiv-1707.09509-red.svg
   :target: https://arxiv.org/abs/1707.09509
   :alt: arXiv:1707.09509

.. |badge-0709.4174| image:: https://img.shields.io/badge/arXiv-0709.4174-red.svg
   :target: https://arxiv.org/abs/0709.4174
   :alt: arXiv:0709.4174

.. |badge-0805.2525| image:: https://img.shields.io/badge/arXiv-0805.2525-red.svg
   :target: https://arxiv.org/abs/0805.2525
   :alt: arXiv:0805.2525

.. |badge-1006.5013| image:: https://img.shields.io/badge/arXiv-1006.5013-red.svg
   :target: https://arxiv.org/abs/1006.5013
   :alt: arXiv:1006.5013

.. |badge-1105.0376| image:: https://img.shields.io/badge/arXiv-1105.0376-red.svg
   :target: https://arxiv.org/abs/1105.0376
   :alt: arXiv:1105.0376

.. |badge-1212.2321| image:: https://img.shields.io/badge/arXiv-1212.2321-red.svg
   :target: https://arxiv.org/abs/1212.2321
   :alt: arXiv:1212.2321

.. |badge-1602.06143| image:: https://img.shields.io/badge/arXiv-1602.06143-red.svg
   :target: https://arxiv.org/abs/1602.06143
   :alt: arXiv:1602.06143

.. |badge-1908.09398| image:: https://img.shields.io/badge/arXiv-1908.09398-red.svg
   :target: https://arxiv.org/abs/1908.09398
   :alt: arXiv:1908.09398

.. |badge-1703.05330| image:: https://img.shields.io/badge/arXiv-1703.05330-red.svg
   :target: https://arxiv.org/abs/1703.05330
   :alt: arXiv:1703.05330

.. |badge-hep-ph/9501281| image:: https://img.shields.io/badge/arXiv-hep--ph/9501281-red.svg
   :target: https://arxiv.org/abs/hep-ph/9501281
   :alt: arXiv:hep-ph/9501281

.. |badge-hep-ph/9910220| image:: https://img.shields.io/badge/arXiv-hep--ph/9910220-red.svg
   :target: https://arxiv.org/abs/hep-ph/9910220
   :alt: arXiv:hep-ph/9910220

.. |badge-2104.05739| image:: https://img.shields.io/badge/arXiv-2104.05739-red.svg
   :target: https://arxiv.org/abs/2104.05739
   :alt: arXiv:2104.05739

.. |badge-1110.3228| image:: https://img.shields.io/badge/arXiv-1110.3228-red.svg
   :target: https://arxiv.org/abs/1110.3228
   :alt: arXiv:1110.3228

.. |badge-1106.3283| image:: https://img.shields.io/badge/arXiv-1106.3283-red.svg
   :target: https://arxiv.org/abs/1106.3283
   :alt: arXiv:1106.3283

.. |badge-1503.05534| image:: https://img.shields.io/badge/arXiv-1503.05534-red.svg
   :target: https://arxiv.org/abs/1503.05534
   :alt: arXiv:1503.05534

.. |badge-hep-ph/0412079| image:: https://img.shields.io/badge/arXiv-hep--ph/0412079-red.svg
   :target: https://arxiv.org/abs/hep-ph/0412079
   :alt: arXiv:hep-ph/0412079

.. |badge-hep-ph/0406261| image:: https://img.shields.io/badge/arXiv-hep--ph/0406261-red.svg
   :target: https://arxiv.org/abs/hep-ph/0406261
   :alt: arXiv:hep-ph/0406261

.. |badge-hep-ph/0406232| image:: https://img.shields.io/badge/arXiv-hep--ph/0406232-red.svg
   :target: https://arxiv.org/abs/hep-ph/0406232
   :alt: arXiv:hep-ph/0406232

.. |badge-0710.1371| image:: https://img.shields.io/badge/arXiv-0710.1371-red.svg
   :target: https://arxiv.org/abs/0710.1371
   :alt: arXiv:0710.1371

.. |badge-0804.2422| image:: https://img.shields.io/badge/arXiv-0804.2422-red.svg
   :target: https://arxiv.org/abs/0804.2422
   :alt: arXiv:0804.2422

.. |badge-1010.0987| image:: https://img.shields.io/badge/arXiv-1010.0987-red.svg
   :target: https://arxiv.org/abs/1010.0987
   :alt: arXiv:1010.0987

.. |badge-1008.0338| image:: https://img.shields.io/badge/arXiv-1008.0338-red.svg
   :target: https://arxiv.org/abs/1008.0338
   :alt: arXiv:1008.0338

.. |badge-1204.3933| image:: https://img.shields.io/badge/arXiv-1204.3933-red.svg
   :target: https://arxiv.org/abs/1204.3933
   :alt: arXiv:1204.3933

.. |badge-1301.1700| image:: https://img.shields.io/badge/arXiv-1301.1700-red.svg
   :target: https://arxiv.org/abs/1301.1700
   :alt: arXiv:1301.1700

.. |badge-1207.5772| image:: https://img.shields.io/badge/arXiv-1207.5772-red.svg
   :target: https://arxiv.org/abs/1207.5772
   :alt: arXiv:1207.5772

.. |badge-1312.5364| image:: https://img.shields.io/badge/arXiv-1312.5364-red.svg
   :target: https://arxiv.org/abs/1312.5364
   :alt: arXiv:1312.5364

.. |badge-2301.04716| image:: https://img.shields.io/badge/arXiv-2301.04716-red.svg
   :target: https://arxiv.org/abs/2301.04716
   :alt: arXiv:2301.04716

.. |badge-2308.02023| image:: https://img.shields.io/badge/arXiv-2308.02023-red.svg
   :target: https://arxiv.org/abs/2308.02023
   :alt: arXiv:2308.02023

.. |badge-2310.01170| image:: https://img.shields.io/badge/arXiv-2310.01170-red.svg
   :target: https://arxiv.org/abs/2310.01170
   :alt: arXiv:2310.01170

.. |badge-2301.08587| image:: https://img.shields.io/badge/arXiv-2301.08587-red.svg
   :target: https://arxiv.org/abs/2301.08587
   :alt: arXiv:2301.08587

.. |badge-hep-ex/0402042| image:: https://img.shields.io/badge/arXiv-hep--ex/0402042-red.svg
   :target: https://arxiv.org/abs/hep-ex/0402042
   :alt: arXiv:hep-ex/0402042

.. |badge-hep-ex/0503044| image:: https://img.shields.io/badge/arXiv-hep--ex/0503044-red.svg
   :target: https://arxiv.org/abs/hep-ex/0503044
   :alt: arXiv:hep-ex/0503044

.. |badge-hep-ex/0608017| image:: https://img.shields.io/badge/arXiv-hep--ex/0608017-red.svg
   :target: https://arxiv.org/abs/hep-ex/0608017
   :alt: arXiv:hep-ex/0608017

.. |badge-hep-ex/0608049| image:: https://img.shields.io/badge/arXiv-hep--ex/0608049-red.svg
   :target: https://arxiv.org/abs/hep-ex/0608049
   :alt: arXiv:hep-ex/0608049

.. |badge-0803.2158| image:: https://img.shields.io/badge/arXiv-0803.2158-red.svg
   :target: https://arxiv.org/abs/0803.2158
   :alt: arXiv:0803.2158

.. |badge-0708.0082| image:: https://img.shields.io/badge/arXiv-0708.0082-red.svg
   :target: https://arxiv.org/abs/0708.0082
   :alt: arXiv:0708.0082

.. |badge-0805.3773| image:: https://img.shields.io/badge/arXiv-0805.3773-red.svg
   :target: https://arxiv.org/abs/0805.3773
   :alt: arXiv:0805.3773

.. |badge-0904.0770| image:: https://img.shields.io/badge/arXiv-0904.0770-red.svg
   :target: https://arxiv.org/abs/0904.0770
   :alt: arXiv:0904.0770

.. |badge-0907.1384| image:: https://img.shields.io/badge/arXiv-0907.1384-red.svg
   :target: https://arxiv.org/abs/0907.1384
   :alt: arXiv:0907.1384

.. |badge-1012.0090| image:: https://img.shields.io/badge/arXiv-1012.0090-red.svg
   :target: https://arxiv.org/abs/1012.0090
   :alt: arXiv:1012.0090

.. |badge-1011.4397| image:: https://img.shields.io/badge/arXiv-1011.4397-red.svg
   :target: https://arxiv.org/abs/1011.4397
   :alt: arXiv:1011.4397

.. |badge-1006.5115| image:: https://img.shields.io/badge/arXiv-1006.5115-red.svg
   :target: https://arxiv.org/abs/1006.5115
   :alt: arXiv:1006.5115

.. |badge-1306.2781| image:: https://img.shields.io/badge/arXiv-1306.2781-red.svg
   :target: https://arxiv.org/abs/1306.2781
   :alt: arXiv:1306.2781

.. |badge-1409.5269| image:: https://img.shields.io/badge/arXiv-1409.5269-red.svg
   :target: https://arxiv.org/abs/1409.5269
   :alt: arXiv:1409.5269

.. |badge-1510.03657| image:: https://img.shields.io/badge/arXiv-1510.03657-red.svg
   :target: https://arxiv.org/abs/1510.03657
   :alt: arXiv:1510.03657

.. |badge-1504.00957| image:: https://img.shields.io/badge/arXiv-1504.00957-red.svg
   :target: https://arxiv.org/abs/1504.00957
   :alt: arXiv:1504.00957

.. |badge-1612.05014| image:: https://img.shields.io/badge/arXiv-1612.05014-red.svg
   :target: https://arxiv.org/abs/1612.05014
   :alt: arXiv:1612.05014

.. |badge-1702.01521| image:: https://img.shields.io/badge/arXiv-1702.01521-red.svg
   :target: https://arxiv.org/abs/1702.01521
   :alt: arXiv:1702.01521

.. |badge-1809.03290| image:: https://img.shields.io/badge/arXiv-1809.03290-red.svg
   :target: https://arxiv.org/abs/1809.03290
   :alt: arXiv:1809.03290

.. |badge-1707.09167| image:: https://img.shields.io/badge/arXiv-1707.09167-red.svg
   :target: https://arxiv.org/abs/1707.09167
   :alt: arXiv:1707.09167

.. |badge-1911.03186| image:: https://img.shields.io/badge/arXiv-1911.03186-red.svg
   :target: https://arxiv.org/abs/1911.03186
   :alt: arXiv:1911.03186

.. |badge-1904.02440| image:: https://img.shields.io/badge/arXiv-1904.02440-red.svg
   :target: https://arxiv.org/abs/1904.02440
   :alt: arXiv:1904.02440

.. |badge-1908.01848| image:: https://img.shields.io/badge/arXiv-1908.01848-red.svg
   :target: https://arxiv.org/abs/1908.01848
   :alt: arXiv:1908.01848

.. |badge-2111.14437| image:: https://img.shields.io/badge/arXiv-2111.14437-red.svg
   :target: https://arxiv.org/abs/2111.14437
   :alt: arXiv:2111.14437

.. |badge-2106.09695| image:: https://img.shields.io/badge/arXiv-2106.09695-red.svg
   :target: https://arxiv.org/abs/2106.09695
   :alt: arXiv:2106.09695

.. |badge-1005.3274| image:: https://img.shields.io/badge/arXiv-1005.3274-red.svg
   :target: https://arxiv.org/abs/1005.3274
   :alt: arXiv:1005.3274

.. |badge-1712.06595| image:: https://img.shields.io/badge/arXiv-1712.06595-red.svg
   :target: https://arxiv.org/abs/1712.06595
   :alt: arXiv:1712.06595

.. |badge-1108.0695| image:: https://img.shields.io/badge/arXiv-1108.0695-red.svg
   :target: https://arxiv.org/abs/1108.0695
   :alt: arXiv:1108.0695

.. |badge-1112.1726| image:: https://img.shields.io/badge/arXiv-1112.1726-red.svg
   :target: https://arxiv.org/abs/1112.1726
   :alt: arXiv:1112.1726

.. |badge-1810.00007| image:: https://img.shields.io/badge/arXiv-1810.00007-red.svg
   :target: https://arxiv.org/abs/1810.00007
   :alt: arXiv:1810.00007

.. |badge-hep-ph/0406184| image:: https://img.shields.io/badge/arXiv-hep--ph/0406184-red.svg
   :target: https://arxiv.org/abs/hep-ph/0406184
   :alt: arXiv:hep-ph/0406184

.. |badge-hep-ph/0004189| image:: https://img.shields.io/badge/arXiv-hep--ph/0004189-red.svg
   :target: https://arxiv.org/abs/hep-ph/0004189
   :alt: arXiv:hep-ph/0004189

.. |badge-hep-ex/9912057| image:: https://img.shields.io/badge/arXiv-hep--ex/9912057-red.svg
   :target: https://arxiv.org/abs/hep-ex/9912057
   :alt: arXiv:hep-ex/9912057

.. |badge-hep-ex/9910046| image:: https://img.shields.io/badge/arXiv-hep--ex/9910046-red.svg
   :target: https://arxiv.org/abs/hep-ex/9910046
   :alt: arXiv:hep-ex/9910046

.. |badge-0801.3418| image:: https://img.shields.io/badge/arXiv-0801.3418-red.svg
   :target: https://arxiv.org/abs/0801.3418
   :alt: arXiv:0801.3418

.. |badge-2302.08834| image:: https://img.shields.io/badge/arXiv-2302.08834-red.svg
   :target: https://arxiv.org/abs/2302.08834
   :alt: arXiv:2302.08834

.. |badge-hep-ph/9612313| image:: https://img.shields.io/badge/arXiv-hep--ph/9612313-red.svg
   :target: https://arxiv.org/abs/hep-ph/9612313
   :alt: arXiv:hep-ph/9612313

.. |badge-hep-ph/9711280| image:: https://img.shields.io/badge/arXiv-hep--ph/9711280-red.svg
   :target: https://arxiv.org/abs/hep-ph/9711280
   :alt: arXiv:hep-ph/9711280

.. |badge-1411.4413| image:: https://img.shields.io/badge/arXiv-1411.4413-red.svg
   :target: https://arxiv.org/abs/1411.4413
   :alt: arXiv:1411.4413

.. |badge-1308.3409| image:: https://img.shields.io/badge/arXiv-1308.3409-red.svg
   :target: https://arxiv.org/abs/1308.3409
   :alt: arXiv:1308.3409

.. |badge-1307.5025| image:: https://img.shields.io/badge/arXiv-1307.5025-red.svg
   :target: https://arxiv.org/abs/1307.5025
   :alt: arXiv:1307.5025

.. |badge-1507.08126| image:: https://img.shields.io/badge/arXiv-1507.08126-red.svg
   :target: https://arxiv.org/abs/1507.08126
   :alt: arXiv:1507.08126

.. |badge-1957565| image:: https://img.shields.io/badge/CDS-1957565-blue.svg
   :target: https://cds.cern.ch/record/1957565?ln=en
   :alt: CDS:1957565

.. |badge-2684828| image:: https://img.shields.io/badge/CDS-2684828-blue.svg
   :target: https://cds.cern.ch/record/2684828?ln=en
   :alt: CDS:2684828

.. |badge-2010.13968| image:: https://img.shields.io/badge/arXiv-2010.13968-red.svg
   :target: https://arxiv.org/abs/2010.13968
   :alt: arXiv:2010.13968

.. |badge-2007.02434| image:: https://img.shields.io/badge/arXiv-2007.02434-red.svg
   :target: https://arxiv.org/abs/2007.02434
   :alt: arXiv:2007.02434

.. |badge-1109.3166| image:: https://img.shields.io/badge/arXiv-1109.3166-red.svg
   :target: https://arxiv.org/abs/1109.3166
   :alt: arXiv:1109.3166

.. |badge-1307.6653| image:: https://img.shields.io/badge/arXiv-1307.6653-red.svg
   :target: https://arxiv.org/abs/1307.6653
   :alt: arXiv:1307.6653

.. |badge-2003.08366| image:: https://img.shields.io/badge/arXiv-2003.08366-red.svg
   :target: https://arxiv.org/abs/2003.08366
   :alt: arXiv:2003.08366

.. |badge-1907.01025| image:: https://img.shields.io/badge/arXiv-1907.01025-red.svg
   :target: https://arxiv.org/abs/1907.01025
   :alt: arXiv:1907.01025

.. |badge-1312.5264| image:: https://img.shields.io/badge/arXiv-1312.5264-red.svg
   :target: https://arxiv.org/abs/1312.5264
   :alt: arXiv:1312.5264

.. |badge-1405.3719| image:: https://img.shields.io/badge/arXiv-1405.3719-red.svg
   :target: https://arxiv.org/abs/1405.3719
   :alt: arXiv:1405.3719

.. |badge-1508.06841| image:: https://img.shields.io/badge/arXiv-1508.06841-red.svg
   :target: https://arxiv.org/abs/1508.06841
   :alt: arXiv:1508.06841

.. |badge-1510.04239| image:: https://img.shields.io/badge/arXiv-1510.04239-red.svg
   :target: https://arxiv.org/abs/1510.04239
   :alt: arXiv:1510.04239

.. |badge-0801.1796| image:: https://img.shields.io/badge/arXiv-0801.1796-red.svg
   :target: https://arxiv.org/abs/0801.1796
   :alt: arXiv:0801.1796

.. |badge-1702.02243| image:: https://img.shields.io/badge/arXiv-1702.02243-red.svg
   :target: https://arxiv.org/abs/1702.02243
   :alt: arXiv:1702.02243

.. |badge-1909.11087| image:: https://img.shields.io/badge/arXiv-1909.11087-red.svg
   :target: https://arxiv.org/abs/1909.11087
   :alt: arXiv:1909.11087

.. |badge-1503.01421| image:: https://img.shields.io/badge/arXiv-1503.01421-red.svg
   :target: https://arxiv.org/abs/1503.01421
   :alt: arXiv:1503.01421

.. |badge-1212.4827| image:: https://img.shields.io/badge/arXiv-1212.4827-red.svg
   :target: https://arxiv.org/abs/1212.4827
   :alt: arXiv:1212.4827

.. |badge-0805.4170| image:: https://img.shields.io/badge/arXiv-0805.4170-red.svg
   :target: https://arxiv.org/abs/0805.4170
   :alt: arXiv:0805.4170

.. |badge-1602.01399| image:: https://img.shields.io/badge/arXiv-1602.01399-red.svg
   :target: https://arxiv.org/abs/1602.01399
   :alt: arXiv:1602.01399

.. |badge-1207.2753| image:: https://img.shields.io/badge/arXiv-1207.2753-red.svg
   :target: https://arxiv.org/abs/1207.2753
   :alt: arXiv:1207.2753

.. |badge-1903.00448| image:: https://img.shields.io/badge/arXiv-1903.00448-red.svg
   :target: https://arxiv.org/abs/1903.00448
   :alt: arXiv:1903.00448

.. |badge-0911.2175| image:: https://img.shields.io/badge/arXiv-0911.2175-red.svg
   :target: https://arxiv.org/abs/0911.2175
   :alt: arXiv:0911.2175

.. |badge-1005.0571| image:: https://img.shields.io/badge/arXiv-1005.0571-red.svg
   :target: https://arxiv.org/abs/1005.0571
   :alt: arXiv:1005.0571

.. |badge-1707.04529| image:: https://img.shields.io/badge/arXiv-1707.04529-red.svg
   :target: https://arxiv.org/abs/1707.04529
   :alt: arXiv:1707.04529

.. |badge-1706.03017| image:: https://img.shields.io/badge/arXiv-1706.03017-red.svg
   :target: https://arxiv.org/abs/1706.03017
   :alt: arXiv:1706.03017

.. |badge-1803.04807| image:: https://img.shields.io/badge/arXiv-1803.04807-red.svg
   :target: https://arxiv.org/abs/1803.04807
   :alt: arXiv:1803.04807

.. |badge-1208.2843| image:: https://img.shields.io/badge/arXiv-1208.2843-red.svg
   :target: https://arxiv.org/abs/1208.2843
   :alt: arXiv:1208.2843

.. |badge-1310.6660| image:: https://img.shields.io/badge/arXiv-1310.6660-red.svg
   :target: https://arxiv.org/abs/1310.6660
   :alt: arXiv:1310.6660

.. |badge-hep-ph/0201044| image:: https://img.shields.io/badge/arXiv-hep--ph/0201044-red.svg
   :target: https://arxiv.org/abs/hep-ph/0201044
   :alt: arXiv:hep-ph/0201044

.. |badge-0809.0222| image:: https://img.shields.io/badge/arXiv-0809.0222-red.svg
   :target: https://arxiv.org/abs/0809.0222
   :alt: arXiv:0809.0222

.. |badge-1310.8555| image:: https://img.shields.io/badge/arXiv-1310.8555-red.svg
   :target: https://arxiv.org/abs/1310.8555
   :alt: arXiv:1310.8555

.. |badge-2111.09849| image:: https://img.shields.io/badge/arXiv-2111.09849-red.svg
   :target: https://arxiv.org/abs/2111.09849
   :alt: arXiv:2111.09849

.. |badge-2111.04327| image:: https://img.shields.io/badge/arXiv-2111.04327-red.svg
   :target: https://arxiv.org/abs/2111.04327
   :alt: arXiv:2111.04327

.. |badge-2203.15679| image:: https://img.shields.io/badge/arXiv-2203.15679-red.svg
   :target: https://arxiv.org/abs/2203.15679
   :alt: arXiv:2203.15679

.. |badge-hep-ph/0212158| image:: https://img.shields.io/badge/arXiv-hep--ph/0212158-red.svg
   :target: https://arxiv.org/abs/hep-ph/0212158
   :alt: arXiv:hep-ph/0212158

.. |badge-1403.0635| image:: https://img.shields.io/badge/arXiv-1403.0635-red.svg
   :target: https://arxiv.org/abs/1403.0635
   :alt: arXiv:1403.0635

.. |badge-1503.07839| image:: https://img.shields.io/badge/arXiv-1503.07839-red.svg
   :target: https://arxiv.org/abs/1503.07839
   :alt: arXiv:1503.07839

.. |badge-1503.07237| image:: https://img.shields.io/badge/arXiv-1503.07237-red.svg
   :target: https://arxiv.org/abs/1503.07237
   :alt: arXiv:1503.07237

.. |badge-1507.01618| image:: https://img.shields.io/badge/arXiv-1507.01618-red.svg
   :target: https://arxiv.org/abs/1507.01618
   :alt: arXiv:1507.01618

.. |badge-1509.06235| image:: https://img.shields.io/badge/arXiv-1509.06235-red.svg
   :target: https://arxiv.org/abs/1509.06235
   :alt: arXiv:1509.06235

.. |badge-1712.09262| image:: https://img.shields.io/badge/arXiv-1712.09262-red.svg
   :target: https://arxiv.org/abs/1712.09262
   :alt: arXiv:1712.09262

.. |badge-1901.02561| image:: https://img.shields.io/badge/arXiv-1901.02561-red.svg
   :target: https://arxiv.org/abs/1901.02561
   :alt: arXiv:1901.02561

.. |badge-2105.14019| image:: https://img.shields.io/badge/arXiv-2105.14019-red.svg
   :target: https://arxiv.org/abs/2105.14019
   :alt: arXiv:2105.14019

.. |badge-1601.02649| image:: https://img.shields.io/badge/arXiv-1601.02649-red.svg
   :target: https://arxiv.org/abs/1601.02649
   :alt: arXiv:1601.02649

.. |badge-1111.1844| image:: https://img.shields.io/badge/arXiv-1111.1844-red.svg
   :target: https://arxiv.org/abs/1111.1844
   :alt: arXiv:1111.1844

.. |badge-1807.01924| image:: https://img.shields.io/badge/arXiv-1807.01924-red.svg
   :target: https://arxiv.org/abs/1807.01924
   :alt: arXiv:1807.01924

.. |badge-1305.5432| image:: https://img.shields.io/badge/arXiv-1305.5432-red.svg
   :target: https://arxiv.org/abs/1305.5432
   :alt: arXiv:1305.5432

.. |badge-1811.00983| image:: https://img.shields.io/badge/arXiv-1811.00983-red.svg
   :target: https://arxiv.org/abs/1811.00983
   :alt: arXiv:1811.00983

.. |badge-hep-ph/0104034| image:: https://img.shields.io/badge/arXiv-hep--ph/0104034-red.svg
   :target: https://arxiv.org/abs/hep-ph/0104034
   :alt: arXiv:hep-ph/0104034

.. |badge-1102.2183| image:: https://img.shields.io/badge/arXiv-1102.2183-red.svg
   :target: https://arxiv.org/abs/1102.2183
   :alt: arXiv:1102.2183

.. |badge-hep-ph/9707371| image:: https://img.shields.io/badge/arXiv-hep--ph/9707371-red.svg
   :target: https://arxiv.org/abs/hep-ph/9707371
   :alt: arXiv:hep-ph/9707371

.. |badge-hep-ph/0404250| image:: https://img.shields.io/badge/arXiv-hep--ph/0404250-red.svg
   :target: https://arxiv.org/abs/hep-ph/0404250
   :alt: arXiv:hep-ph/0404250

.. |badge-2011.09813| image:: https://img.shields.io/badge/arXiv-2011.09813-red.svg
   :target: https://arxiv.org/abs/2011.09813
   :alt: arXiv:2011.09813

.. |badge-1909.12524| image:: https://img.shields.io/badge/arXiv-1909.12524-red.svg
   :target: https://arxiv.org/abs/1909.12524
   :alt: arXiv:1909.12524

.. |badge-2502.xxxxx| image:: https://img.shields.io/badge/arXiv-2502.xxxxx-red.svg
   :target: https://arxiv.org/abs/2502.xxxxx
   :alt: arXiv:2502.xxxxx

.. |badge-hep-ph/0512066| image:: https://img.shields.io/badge/arXiv-hep--ph/0512066-red.svg
   :target: https://arxiv.org/abs/hep-ph/0512066
   :alt: arXiv:hep-ph/0512066

.. |badge-1310.3722| image:: https://img.shields.io/badge/arXiv-1310.3722-red.svg
   :target: https://arxiv.org/abs/1310.3722
   :alt: arXiv:1310.3722

.. |badge-1501.00367| image:: https://img.shields.io/badge/arXiv-1501.00367-red.svg
   :target: https://arxiv.org/abs/1501.00367
   :alt: arXiv:1501.00367

.. |badge-1406.2279| image:: https://img.shields.io/badge/arXiv-1406.2279-red.svg
   :target: https://arxiv.org/abs/1406.2279
   :alt: arXiv:1406.2279

.. |badge-1505.03925| image:: https://img.shields.io/badge/arXiv-1505.03925-red.svg
   :target: https://arxiv.org/abs/1505.03925
   :alt: arXiv:1505.03925

.. |badge-1503.05762| image:: https://img.shields.io/badge/arXiv-1503.05762-red.svg
   :target: https://arxiv.org/abs/1503.05762
   :alt: arXiv:1503.05762

.. |badge-1711.11013| image:: https://img.shields.io/badge/arXiv-1711.11013-red.svg
   :target: https://arxiv.org/abs/1711.11013
   :alt: arXiv:1711.11013

.. |badge-2104.09883| image:: https://img.shields.io/badge/arXiv-2104.09883-red.svg
   :target: https://arxiv.org/abs/2104.09883
   :alt: arXiv:2104.09883

.. |badge-2207.12468| image:: https://img.shields.io/badge/arXiv-2207.12468-red.svg
   :target: https://arxiv.org/abs/2207.12468
   :alt: arXiv:2207.12468

.. |badge-2304.03137| image:: https://img.shields.io/badge/arXiv-2304.03137-red.svg
   :target: https://arxiv.org/abs/2304.03137
   :alt: arXiv:2304.03137

.. |badge-1306.2384| image:: https://img.shields.io/badge/arXiv-1306.2384-red.svg
   :target: https://arxiv.org/abs/1306.2384
   :alt: arXiv:1306.2384

.. |badge-nucl-th/0703094| image:: https://img.shields.io/badge/arXiv-nucl--th/0703094-red.svg
   :target: https://arxiv.org/abs/nucl-th/0703094
   :alt: arXiv:nucl-th/0703094

.. |badge-1409.7816| image:: https://img.shields.io/badge/arXiv-1409.7816-red.svg
   :target: https://arxiv.org/abs/1409.7816
   :alt: arXiv:1409.7816

.. |badge-2306.05657| image:: https://img.shields.io/badge/arXiv-2306.05657-red.svg
   :target: https://arxiv.org/abs/2306.05657
   :alt: arXiv:2306.05657

.. |badge-1801.01112| image:: https://img.shields.io/badge/arXiv-1801.01112-red.svg
   :target: https://arxiv.org/abs/1801.01112
   :alt: arXiv:1801.01112

.. |badge-2210.09832| image:: https://img.shields.io/badge/arXiv-2210.09832-red.svg
   :target: https://arxiv.org/abs/2210.09832
   :alt: arXiv:2210.09832

.. |badge-hep-ph/0502060| image:: https://img.shields.io/badge/arXiv-hep--ph/0502060-red.svg
   :target: https://arxiv.org/abs/hep-ph/0502060
   :alt: arXiv:hep-ph/0502060

.. |badge-hep-ph/0504091| image:: https://img.shields.io/badge/arXiv-hep--ph/0504091-red.svg
   :target: https://arxiv.org/abs/hep-ph/0504091
   :alt: arXiv:hep-ph/0504091

.. |badge-hep-ph/0611193| image:: https://img.shields.io/badge/arXiv-hep--ph/0611193-red.svg
   :target: https://arxiv.org/abs/hep-ph/0611193
   :alt: arXiv:hep-ph/0611193

.. |badge-1006.4945| image:: https://img.shields.io/badge/arXiv-1006.4945-red.svg
   :target: https://arxiv.org/abs/1006.4945
   :alt: arXiv:1006.4945

.. |badge-1703.04765| image:: https://img.shields.io/badge/arXiv-1703.04765-red.svg
   :target: https://arxiv.org/abs/1703.04765
   :alt: arXiv:1703.04765

.. |badge-hep-ph/9603237| image:: https://img.shields.io/badge/arXiv-hep--ph/9603237-red.svg
   :target: https://arxiv.org/abs/hep-ph/9603237
   :alt: arXiv:hep-ph/9603237

.. |badge-0910.2928| image:: https://img.shields.io/badge/arXiv-0910.2928-red.svg
   :target: https://arxiv.org/abs/0910.2928
   :alt: arXiv:0910.2928

.. |badge-1374913| image:: https://img.shields.io/badge/CDS-1374913-blue.svg
   :target: https://cds.cern.ch/record/1374913?ln=en
   :alt: CDS:1374913

.. |badge-1209.4284| image:: https://img.shields.io/badge/arXiv-1209.4284-red.svg
   :target: https://arxiv.org/abs/1209.4284
   :alt: arXiv:1209.4284

.. |badge-1211.2674| image:: https://img.shields.io/badge/arXiv-1211.2674-red.svg
   :target: https://arxiv.org/abs/1211.2674
   :alt: arXiv:1211.2674

.. |badge-1210.4492| image:: https://img.shields.io/badge/arXiv-1210.4492-red.svg
   :target: https://arxiv.org/abs/1210.4492
   :alt: arXiv:1210.4492

.. |badge-1206.2794| image:: https://img.shields.io/badge/arXiv-1206.2794-red.svg
   :target: https://arxiv.org/abs/1206.2794
   :alt: arXiv:1206.2794

.. |badge-1304.2600| image:: https://img.shields.io/badge/arXiv-1304.2600-red.svg
   :target: https://arxiv.org/abs/1304.2600
   :alt: arXiv:1304.2600

.. |badge-1304.6325| image:: https://img.shields.io/badge/arXiv-1304.6325-red.svg
   :target: https://arxiv.org/abs/1304.6325
   :alt: arXiv:1304.6325

.. |badge-1307.5024| image:: https://img.shields.io/badge/arXiv-1307.5024-red.svg
   :target: https://arxiv.org/abs/1307.5024
   :alt: arXiv:1307.5024

.. |badge-1307.2782| image:: https://img.shields.io/badge/arXiv-1307.2782-red.svg
   :target: https://arxiv.org/abs/1307.2782
   :alt: arXiv:1307.2782

.. |badge-1308.1277| image:: https://img.shields.io/badge/arXiv-1308.1277-red.svg
   :target: https://arxiv.org/abs/1308.1277
   :alt: arXiv:1308.1277

.. |badge-1403.8044| image:: https://img.shields.io/badge/arXiv-1403.8044-red.svg
   :target: https://arxiv.org/abs/1403.8044
   :alt: arXiv:1403.8044

.. |badge-1403.8045| image:: https://img.shields.io/badge/arXiv-1403.8045-red.svg
   :target: https://arxiv.org/abs/1403.8045
   :alt: arXiv:1403.8045

.. |badge-1406.6482| image:: https://img.shields.io/badge/arXiv-1406.6482-red.svg
   :target: https://arxiv.org/abs/1406.6482
   :alt: arXiv:1406.6482

.. |badge-1411.3104| image:: https://img.shields.io/badge/arXiv-1411.3104-red.svg
   :target: https://arxiv.org/abs/1411.3104
   :alt: arXiv:1411.3104

.. |badge-1512.04442| image:: https://img.shields.io/badge/arXiv-1512.04442-red.svg
   :target: https://arxiv.org/abs/1512.04442
   :alt: arXiv:1512.04442

.. |badge-1503.07138| image:: https://img.shields.io/badge/arXiv-1503.07138-red.svg
   :target: https://arxiv.org/abs/1503.07138
   :alt: arXiv:1503.07138

.. |badge-1506.08777| image:: https://img.shields.io/badge/arXiv-1506.08777-red.svg
   :target: https://arxiv.org/abs/1506.08777
   :alt: arXiv:1506.08777

.. |badge-1503.07483| image:: https://img.shields.io/badge/arXiv-1503.07483-red.svg
   :target: https://arxiv.org/abs/1503.07483
   :alt: arXiv:1503.07483

.. |badge-1606.04731| image:: https://img.shields.io/badge/arXiv-1606.04731-red.svg
   :target: https://arxiv.org/abs/1606.04731
   :alt: arXiv:1606.04731

.. |badge-1608.04855| image:: https://img.shields.io/badge/arXiv-1608.04855-red.svg
   :target: https://arxiv.org/abs/1608.04855
   :alt: arXiv:1608.04855

.. |badge-1610.08288| image:: https://img.shields.io/badge/arXiv-1610.08288-red.svg
   :target: https://arxiv.org/abs/1610.08288
   :alt: arXiv:1610.08288

.. |badge-1703.05747| image:: https://img.shields.io/badge/arXiv-1703.05747-red.svg
   :target: https://arxiv.org/abs/1703.05747
   :alt: arXiv:1703.05747

.. |badge-1705.05802| image:: https://img.shields.io/badge/arXiv-1705.05802-red.svg
   :target: https://arxiv.org/abs/1705.05802
   :alt: arXiv:1705.05802

.. |badge-1808.00264| image:: https://img.shields.io/badge/arXiv-1808.00264-red.svg
   :target: https://arxiv.org/abs/1808.00264
   :alt: arXiv:1808.00264

.. |badge-1906.08356| image:: https://img.shields.io/badge/arXiv-1906.08356-red.svg
   :target: https://arxiv.org/abs/1906.08356
   :alt: arXiv:1906.08356

.. |badge-2003.08453| image:: https://img.shields.io/badge/arXiv-2003.08453-red.svg
   :target: https://arxiv.org/abs/2003.08453
   :alt: arXiv:2003.08453

.. |badge-2012.05319| image:: https://img.shields.io/badge/arXiv-2012.05319-red.svg
   :target: https://arxiv.org/abs/2012.05319
   :alt: arXiv:2012.05319

.. |badge-2105.14007| image:: https://img.shields.io/badge/arXiv-2105.14007-red.svg
   :target: https://arxiv.org/abs/2105.14007
   :alt: arXiv:2105.14007

.. |badge-2108.09284| image:: https://img.shields.io/badge/arXiv-2108.09284-red.svg
   :target: https://arxiv.org/abs/2108.09284
   :alt: arXiv:2108.09284

.. |badge-2105.14738| image:: https://img.shields.io/badge/arXiv-2105.14738-red.svg
   :target: https://arxiv.org/abs/2105.14738
   :alt: arXiv:2105.14738

.. |badge-2107.13428| image:: https://img.shields.io/badge/arXiv-2107.13428-red.svg
   :target: https://arxiv.org/abs/2107.13428
   :alt: arXiv:2107.13428

.. |badge-2211.02724| image:: https://img.shields.io/badge/arXiv-2211.02724-red.svg
   :target: https://arxiv.org/abs/2211.02724
   :alt: arXiv:2211.02724

.. |badge-1501.01646| image:: https://img.shields.io/badge/arXiv-1501.01646-red.svg
   :target: https://arxiv.org/abs/1501.01646
   :alt: arXiv:1501.01646

.. |badge-2102.07233| image:: https://img.shields.io/badge/arXiv-2102.07233-red.svg
   :target: https://arxiv.org/abs/2102.07233
   :alt: arXiv:2102.07233

.. |badge-0707.1694| image:: https://img.shields.io/badge/arXiv-0707.1694-red.svg
   :target: https://arxiv.org/abs/0707.1694
   :alt: arXiv:0707.1694

.. |badge-hep-ph/9909292| image:: https://img.shields.io/badge/arXiv-hep--ph/9909292-red.svg
   :target: https://arxiv.org/abs/hep-ph/9909292
   :alt: arXiv:hep-ph/9909292

.. |badge-hep-ph/0609232| image:: https://img.shields.io/badge/arXiv-hep--ph/0609232-red.svg
   :target: https://arxiv.org/abs/hep-ph/0609232
   :alt: arXiv:hep-ph/0609232

.. |badge-2107.13140| image:: https://img.shields.io/badge/arXiv-2107.13140-red.svg
   :target: https://arxiv.org/abs/2107.13140
   :alt: arXiv:2107.13140

.. |badge-1603.02974| image:: https://img.shields.io/badge/arXiv-1603.02974-red.svg
   :target: https://arxiv.org/abs/1603.02974
   :alt: arXiv:1603.02974

.. |badge-hep-ph/9912391| image:: https://img.shields.io/badge/arXiv-hep--ph/9912391-red.svg
   :target: https://arxiv.org/abs/hep-ph/9912391
   :alt: arXiv:hep-ph/9912391

.. |badge-1109.6786| image:: https://img.shields.io/badge/arXiv-1109.6786-red.svg
   :target: https://arxiv.org/abs/1109.6786
   :alt: arXiv:1109.6786

.. |badge-2312.14070| image:: https://img.shields.io/badge/arXiv-2312.14070-red.svg
   :target: https://arxiv.org/abs/2312.14070
   :alt: arXiv:2312.14070

.. |badge-2106.13617| image:: https://img.shields.io/badge/arXiv-2106.13617-red.svg
   :target: https://arxiv.org/abs/2106.13617
   :alt: arXiv:2106.13617

.. |badge-1501.05373| image:: https://img.shields.io/badge/arXiv-1501.05373-red.svg
   :target: https://arxiv.org/abs/1501.05373
   :alt: arXiv:1501.05373

.. |badge-2303.11280| image:: https://img.shields.io/badge/arXiv-2303.11280-red.svg
   :target: https://arxiv.org/abs/2303.11280
   :alt: arXiv:2303.11280

.. |badge-1809.06867| image:: https://img.shields.io/badge/arXiv-1809.06867-red.svg
   :target: https://arxiv.org/abs/1809.06867
   :alt: arXiv:1809.06867

.. |badge-hep-ph/0403185| image:: https://img.shields.io/badge/arXiv-hep--ph/0403185-red.svg
   :target: https://arxiv.org/abs/hep-ph/0403185
   :alt: arXiv:hep-ph/0403185

.. |badge-math/0405111| image:: https://img.shields.io/badge/arXiv-math/0405111-red.svg
   :target: https://arxiv.org/abs/math/0405111
   :alt: arXiv:math/0405111

.. |badge-1309.0301| image:: https://img.shields.io/badge/arXiv-1309.0301-red.svg
   :target: https://arxiv.org/abs/1309.0301
   :alt: arXiv:1309.0301

.. |badge-1007.3178| image:: https://img.shields.io/badge/arXiv-1007.3178-red.svg
   :target: https://arxiv.org/abs/1007.3178
   :alt: arXiv:1007.3178

.. |badge-hep-ph/0111166| image:: https://img.shields.io/badge/arXiv-hep--ph/0111166-red.svg
   :target: https://arxiv.org/abs/hep-ph/0111166
   :alt: arXiv:hep-ph/0111166

.. |badge-hep-ph/0606167| image:: https://img.shields.io/badge/arXiv-hep--ph/0606167-red.svg
   :target: https://arxiv.org/abs/hep-ph/0606167
   :alt: arXiv:hep-ph/0606167

.. |badge-hep-ph/9701390| image:: https://img.shields.io/badge/arXiv-hep--ph/9701390-red.svg
   :target: https://arxiv.org/abs/hep-ph/9701390
   :alt: arXiv:hep-ph/9701390



.. |br| raw:: html

   <br>
